--- a/images/nem-di-a-mon-9f-16-re/config.ini
+++ b/images/nem-di-a-mon-9f-16-re/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/nem-di-a-mon-9f-16-re.html
 lastopen = 2024-06-10 00:47:22
 
 [search]
-lastsearch = 2024-07-12 00:30:11
+lastsearch = 2024-07-12 03:17:02
 
 [en.wikipedia.org]
 match = 0.0%%
 title = 
-url = https://en.wikipedia.org/wiki/Jenna_Dewan
+url = https://en.wikipedia.org/wiki/Khloé_Kardashian
 
 [www.marysrosaries.com]
 match = -33.3%%
@@ -27,9 +27,9 @@ title = Learning Hungarian on Duolingo | I was looking for a list ...
 url = https://m.facebook.com/groups/943246729103874/posts/7428405300587952/
 
 [www.instagram.com]
-match = -100.0%%
-title = Adam Mosseri (@mosseri) • Instagram photos and videos
-url = https://www.instagram.com/mosseri/?hl=en
+match = -81.0%%
+title = Madonna (@madonna) • Instagram photos and videos
+url = https://www.instagram.com/madonna/?hl=en
 
 [www.imdb.com]
 match = -23.8%%
@@ -107,9 +107,9 @@ title = Rover.com: Book Dog Boarding, Dog Walking and More
 url = http://www.rover.com/
 
 [www.youtube.com]
-match = -123.8%%
-title = Season 2021 Opening Day | Full Livestream - League of ...
-url = https://www.youtube.com/watch?v=rnFRcjzhTzE
+match = -33.3%%
+title = Beck - Loser (Official Music Video)
+url = https://www.youtube.com/watch?v=YgSPaXgAdzE
 
 [www.epa.gov]
 match = -19.0%%
@@ -290,4 +290,9 @@ url = https://www.tripadvisor.com/Restaurant_Review-g1182377-d17568199-Reviews-V
 match = -138.1%%
 title = Easy Digital Downloads - The Best Digital eCommerce Plugin ...
 url = https://easydigitaldownloads.com/
+
+[www.newbalance.com]
+match = -66.7%%
+title = New Balance: Shoes, Sneakers, & Athletic Wear
+url = https://www.newbalance.com/
 
