--- a/images/vo-chan-ks-uc-24-23/config.ini
+++ b/images/vo-chan-ks-uc-24-23/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/vo-chan-ks-uc-24-23.html
 lastopen = 2024-06-10 00:37:18
 
 [search]
-lastsearch = 2024-07-12 00:45:48
+lastsearch = 2024-07-12 03:20:38
 
 [gobearcats.com]
 match = -142.1%%
@@ -27,9 +27,9 @@ title = MSN | Outlook, Office, Skype, Bing, Breaking News, and Latest ...
 url = https://www.msn.com/
 
 [www.ipcc.ch]
-match = -168.4%%
-title = Chapter 5: Demand, services and social aspects of mitigation
-url = https://www.ipcc.ch/report/ar6/wg3/chapter/chapter-5/
+match = -152.6%%
+title = Climate Change 2007: Impacts, Adaptation and Vulnerability
+url = https://www.ipcc.ch/site/assets/uploads/2018/03/ar4_wg2_full_report.pdf
 
 [www.researchgate.net]
 match = -173.7%%
@@ -132,9 +132,9 @@ title = licensed-electricians.pdf
 url = https://home.nyc.gov/assets/buildings/pdf/licensed-electricians.pdf
 
 [profiles.ucsd.edu]
-match = -100.0%%
-title = Minya Pu
-url = https://profiles.ucsd.edu/minya.pu
+match = -21.1%%
+title = Karen Messer | UCSD Profiles
+url = https://profiles.ucsd.edu/karen.messer
 
 [som.cuanschutz.edu]
 match = -121.1%%
@@ -312,9 +312,9 @@ title = GW170104: Observation of a 50-solar-mass binary black ...
 url = https://www.ligo.org/detections/GW170104/paper/GW170104-Supplement.pdf
 
 [www.ncbi.nlm.nih.gov]
-match = -84.2%%
-title = Vancomycin Resistance in Enterococcus and ...
-url = https://www.ncbi.nlm.nih.gov/pmc/articles/PMC9866002/
+match = -163.2%%
+title = A Comprehensive Review of Health Benefits of Qigong and ...
+url = https://www.ncbi.nlm.nih.gov/pmc/articles/PMC3085832/
 
 [www.ucdavis.edu]
 match = -52.6%%
