--- a/images/chi-u-nh-a-thai-binh-10/config.ini
+++ b/images/chi-u-nh-a-thai-binh-10/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chi-u-nh-a-thai-binh-10.html
 lastopen = 2024-06-09 22:17:45
 
 [search]
-lastsearch = 2024-07-12 02:45:58
+lastsearch = 2024-07-12 03:14:53
 
 [www.vesselfinder.com]
 match = -91.3%%
@@ -28,8 +28,8 @@ url = https://thuvienphapluat.vn/van-ban/Bat-dong-san/Chi-thi-10-CT-UBND-2021-ch
 
 [sotuphap.thaibinh.gov.vn]
 match = 17.4%%
-title = THÔNG BAO DAU GIA TAI SAN Qn 10)
-url = https://sotuphap.thaibinh.gov.vn/upload/80609/20220927/TBNY_so_16_10_Hd13-2022_cua_Ngan_hang_NN_PTNT_Viet_Nam_chi_nhanh_huyen_Tien_Hai_Thai_Binh__lan_10__94ebf.pdf
+title = THÔNG BAO DAU GIA TAI SAN
+url = https://sotuphap.thaibinh.gov.vn/upload/80609/20240517/TBNY_so_117_QSDd_xa_Quynh_Minh-Quynh_Phu-Thai_Binh_df094.pdf
 
 [www.youtube.com]
 match = 0.0%%
@@ -187,9 +187,9 @@ title = Trường Đại học Thái Bình Dương – Học từ Trải nghiệ
 url = https://tbd.edu.vn/
 
 [caodangytb.edu.vn]
-match = -34.8%%
-title = UBND TiNH THAI BINH TRUONG CAO DANG Y TE S6
-url = http://caodangytb.edu.vn/uploads/news/2023_10/qd-444.pdf
+match = 36.8%%
+title = UBND TINH 1HAI BINH
+url = http://caodangytb.edu.vn/uploads/laws/tb-10.pdf
 
 [cdcthaibinh.vn]
 match = -27.3%%
@@ -275,4 +275,24 @@ url = https://english.haiquanonline.com.vn/export-of-denim-fabrics-quickly-recov
 match = -47.8%%
 title = Thai Binh University, Thai Binh, Vietnam - Articles
 url = https://www.scirp.org/(S(351jmbntvnsjt1aadkozje))/journal/articles?searchcode=Thai+Binh+University,+Thai+Binh,+Vietnam&searchfield=affs&page=1
+
+[thoibinh.camau.gov.vn]
+match = -91.3%%
+title = Thai Binh, ngay.iR thdng 4 ndm 2019 BAocAo Cong tac chi ...
+url = https://thoibinh.camau.gov.vn/wps/wcm/connect/huyenthoibinh/c227ba14-9360-4211-a08d-7cd063c7aaa0/212+BC+công+tác+chỉ+đạo,+điều+hành+thực+hiện+nhiệm+vụ+phát+triển+kinh+tế+xã+hội+tháng+4+và+chương+trình+công+tác+tháng+5.signed.pdf?MOD=AJPERES&CACHEID=ROOTWORKSPACE.Z18_5PKIGBC0NOLM90QE6VPK9OE4J4-c227ba14-9360-4211-a08d-7cd063c7aaa0-mWdaUOD
+
+[www.mof.gov.vn]
+match = -47.8%%
+title = Tkr do - Hph phlic Ha Noi, ngay 20 thong 01 no
+url = https://www.mof.gov.vn/webcenter/contentattachfile/idcplg?dID=16993&dDocName=BTC266770&filename=1680339.PDF
+
+[bvnhithaibinh.vn]
+match = 0.0%%
+title = SO Y TE THAI BINH BENH VIEN NHI So
+url = http://bvnhithaibinh.vn/uploads/tin-tuc-su-kien/2018_09/qlcl/5kq-hlnb-noi-tru-lan-2-2018.pdf
+
+[storage-vnportal.vnpt.vn]
+match = -187.5%%
+title = }zJ-----
+url = https://storage-vnportal.vnpt.vn/cmu-sgddt/6228/Nam2023/ho-tro-phuc-vu-le-giao-nhan-quan-tpcm-23.pdf
 
