--- a/images/chieu-lac-d2-14/config.ini
+++ b/images/chieu-lac-d2-14/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-d2-14.html
 lastopen = 2024-06-21 06:28:49
 
 [search]
-lastsearch = 2024-07-12 02:10:07
+lastsearch = 2024-07-12 03:19:21
 
 [www.diepxuan.com]
 match = 33.3%%
@@ -92,9 +92,9 @@ title = Ways Station Bình Thạnh: 🏠 281 Nguyễn Văn Đậu, P. ...
 url = https://m.facebook.com/waysstation/photos/a.179106562519975/1189872421443379/?type=3
 
 [www.youtube.com]
-match = -206.7%%
-title = ĐIỀU GÌ SẼ " ĐỔI CHIỀU TĂNG MẠNH " VỚI BẠN NỬA CUỐI ...
-url = https://www.youtube.com/watch?v=SooULrY4D6M
+match = -133.3%%
+title = Zonlai 14mm f/2 lens review with samples
+url = https://www.youtube.com/watch?v=40ccAiDlrss
 
 [grandpark-vinhomes.com]
 match = -186.7%%
@@ -127,9 +127,9 @@ title = Máy chiếu Sony VPL-DX221 - Digiplus
 url = https://digiplus.vn/may-chieu-sony-vpl-dx221/
 
 [batdongsan.com.vn]
-match = -200.0%%
-title = Chung cư D2 Giảng Võ - Mua Bán Căn Hộ Chung Cư T7/ ...
-url = https://batdongsan.com.vn/ban-can-ho-chung-cu-chung-cu-d2-giang-vo
+match = -160.0%%
+title = Mua bán nhà mặt tiền tại đường D2, Quận Bình Tân
+url = https://batdongsan.com.vn/ban-nha-mat-pho-duong-d2-65
 
 [luatvietnam.vn]
 match = -220.0%%
