--- a/images/chieu-lac-gam-16/config.ini
+++ b/images/chieu-lac-gam-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-gam-16.html
 lastopen = 2024-06-09 23:10:09
 
 [search]
-lastsearch = 2024-07-12 02:46:44
+lastsearch = 2024-07-12 03:19:32
 
 [www.diepxuan.com]
 match = 22.2%%
@@ -17,9 +17,9 @@ title = Chiếu lác thiên nhiên : 1m6 .1m8
 url = https://shopee.vn/Chiếu-lác-thiên-nhiên-1m6-.1m8-i.154866392.2623269681
 
 [www.youtube.com]
-match = -237.5%%
-title = [Xe oto] Cận cảnh thay trục các đăng dễ dàng tại nhà.Replace ...
-url = https://www.youtube.com/watch?v=AcbgCyfkyYc
+match = -212.5%%
+title = [TV] Gấm Kami VS Uyên Phương | GIẢI POOL 9 BI HBSF II ...
+url = https://www.youtube.com/watch?v=Ir7sFOF1oOY
 
 [hawater.com.vn]
 match = -75.0%%
@@ -97,8 +97,8 @@ title = mega88 slot game–Apps on Google Play964.91.4
 url = https://sv.ut.edu.vn/newscowtl1.html
 
 [yamaha-motor.com.vn]
-match = -250.0%%
-title = PG-1
+match = -43.8%%
+title = PG-1 - Yamaha Motor Việt Nam
 url = https://yamaha-motor.com.vn/xe/pg-1-bns1/
 
 [tuoitre.vn]
