--- a/images/nem-di-a-mon-9f-2m-22-re/config.ini
+++ b/images/nem-di-a-mon-9f-2m-22-re/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/nem-di-a-mon-9f-2m-22-re.html
 lastopen = 2024-06-10 00:56:34
 
 [search]
-lastsearch = 2024-07-12 02:52:03
+lastsearch = 2024-07-12 03:19:09
 
 [www.tiktok.com]
 match = 9.1%%
@@ -12,8 +12,8 @@ title = La Rive Sweet Have Fun
 url = https://www.tiktok.com/discover/la-rive-sweet-have-fun
 
 [www.reddit.com]
-match = -25.0%%
-title = 22re/22r - Mechanic told me it was junk
+match = -91.7%%
+title = 22re/22r - Mechanic told me it was junk : r/ToyotaPickup
 url = https://www.reddit.com/r/ToyotaPickup/comments/12aw6b1/22re22r_mechanic_told_me_it_was_junk/
 
 [www.pirate4x4.com]
@@ -52,9 +52,9 @@ title = Overview of the Toyota 22RE motor... what are all these ...
 url = https://www.youtube.com/watch?v=btO13aO_QLU
 
 [books.google.com]
-match = -91.7%%
-title = Wind and Seismic Effects: Proceedings of the 23rd Joint ...
-url = https://books.google.com/books?id=zO5SJiQTEJkC&pg=PA260&lpg=PA260&dq=nem+di+a+mon+9f+2m+22+re&source=bl&ots=vWi8o0K0f6&sig=ACfU3U0YeapYzWPUt1agTXG2xtvKY5Nbfw&hl=en&sa=X&ved=2ahUKEwiwt9LG4Z-HAxVeD1kFHe_cBVgQ6AF6BAgtEAM
+match = -87.5%%
+title = Billboard - Apr 3, 2010 - Page 56 - Google Books Result
+url = https://books.google.com/books?id=rOA5W_BoYGIC&pg=RA1-PA56&lpg=RA1-PA56&dq=nem+di+a+mon+9f+2m+22+re&source=bl&ots=r3H09PlPZ4&sig=ACfU3U2eaGj3qQASYJqThIzmnaHbX33cpA&hl=en&sa=X&ved=2ahUKEwi6lv_N55-HAxVckokEHQwLDosQ6AF6BAgTEAM
 
 [www.kvaser.cn]
 match = 9.1%%
