--- a/images/vo-chan-ks-uc-20-230/config.ini
+++ b/images/vo-chan-ks-uc-20-230/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/vo-chan-ks-uc-20-230.html
 lastopen = 2024-06-10 00:43:14
 
 [search]
-lastsearch = 2024-07-12 02:18:15
+lastsearch = 2024-07-12 03:17:33
 
 [www.dir.ca.gov]
 match = -28.6%%
@@ -12,9 +12,9 @@ title = Lien Claimants
 url = https://www.dir.ca.gov/ftproot/EAMSLienClaimants.txt
 
 [profiles.ucsf.edu]
-match = -45.0%%
-title = Nicholas Butowski, MD - UCSF Profiles
-url = https://profiles.ucsf.edu/nicholas.butowski
+match = 10.0%%
+title = Joan Hilton, DSc, MPH
+url = https://profiles.ucsf.edu/joan.hilton
 
 [cityofclovis.com]
 match = -65.0%%
