--- a/images/vo-goi-bears-45x65/config.ini
+++ b/images/vo-goi-bears-45x65/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/vo-goi-bears-45x65.html
 lastopen = 2024-07-01 17:35:59
 
 [search]
-lastsearch = 2024-07-12 02:48:24
+lastsearch = 2024-07-12 03:14:21
 
 [everonvn.com.vn]
 match = -11.1%%
@@ -12,9 +12,9 @@ title = Bộ Everon Ep1831 - Curtis
 url = https://everonvn.com.vn/everon/630/bo-everon-ep1831
 
 [www.lazada.vn]
-match = -161.1%%
-title = Hoạt động♀Chất lượng cao Vỏ gối bông 45x65 etami, mềm mại ...
-url = https://www.lazada.vn/products/hoat-dongchat-luong-cao-vo-goi-bong-45x65-etami-mem-mai-va-min-mang-thiet-ke-i2641874444-s12892934652.html?from_gmc=1&fl_tag=1
+match = -172.2%%
+title = 【Ready】⚡ Vỏ gối nằm vỏ gối đầu kích thước 45x65 được chọn ...
+url = https://www.lazada.vn/products/ready-vo-goi-nam-vo-goi-dau-kich-thuoc-45x65-duoc-chon-mau-i2364886208.html
 
 [www.reddit.com]
 match = -150.0%%
@@ -52,7 +52,7 @@ title = Vỏ gối nằm được bán bởi công ty Lidaco Official Store
 url = https://sieuthicholon.com/vo-goi-nam-23484/?cong-ty=lidaco-official-store
 
 [dienmayhc.com]
-match = -166.7%%
-title = Vỏ gối nằm được bán bởi người bán PHUCTHAI CHĂN GA GỐI ...
-url = https://dienmayhc.com/vo-goi-nam-23452/?nguoi-ban=phucthai-chan-ga-goi
+match = -216.7%%
+title = Vỏ gối nằm chính hãng, giá rẻ, mới nhất tháng 07/2024, Giao hàng ...
+url = https://dienmayhc.com/vo-goi-nam-23452/?nguoi-ban=347868522
 
