--- a/images/ruot-nem-korea-9f-12/config.ini
+++ b/images/ruot-nem-korea-9f-12/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ruot-nem-korea-9f-12.html
 lastopen = 2024-06-09 23:03:30
 
 [search]
-lastsearch = 2024-07-11 21:11:52
+lastsearch = 2024-07-12 03:30:14
 
 [www.diepxuan.com]
 match = -35.0%%
@@ -27,9 +27,9 @@ title = Nam Joo-hyuk
 url = https://en.wikipedia.org/wiki/Nam_Joo-hyuk
 
 [www.facebook.com]
-match = -160.0%%
-title = West Point Department of History - CPT Makonen Campbell asks ...
-url = https://www.facebook.com/photo.php?fbid=2240494186000553&id=130999010283425&set=a.135510956498897&locale=hu_HU
+match = 15.0%%
+title = Chăn ga gối đệm Hà Nội
+url = https://www.facebook.com/demgiare.net/posts/bán-ruột-đệm-bông-ép-cứng-ruột-đệm-mút-giá-rẻhttpdemgiarenetban-ruot-bong-ep-cun/642059146147067/
 
 [www.vietnam.vn]
 match = -155.0%%
@@ -134,7 +134,7 @@ url = https://wildrift.leagueoflegends.com/en-us/
 [books.google.com]
 match = -135.0%%
 title = The Japan Daily Mail - Page 194 - Google Books Result
-url = https://books.google.com/books?id=63Q9AQAAMAAJ&pg=RA1-PA194&lpg=RA1-PA194&dq=ruot+nem+korea+9f+12&source=bl&ots=-bek0nCKkT&sig=ACfU3U2g--Vawid7j6aYBHHvYbi0CMIOmw&hl=en&sa=X&ved=2ahUKEwjPtJyp1J2HAxVpl4kEHR4kAg0Q6AF6BAgYEAM
+url = https://books.google.com/books?id=63Q9AQAAMAAJ&pg=RA1-PA194&lpg=RA1-PA194&dq=ruot+nem+korea+9f+12&source=bl&ots=-bek1kGQgU&sig=ACfU3U2Escm9GEbZEkbfThffkwcpiiDpBw&hl=en&sa=X&ved=2ahUKEwi879yK6p-HAxU8EVkFHVLMBWAQ6AF6BAg_EAM
 
 [thehill.com]
 match = -105.0%%
@@ -267,9 +267,9 @@ title = 'I told him to shut up' - Ronaldo explains furious reaction ...
 url = https://www.goal.com/en/news/i-told-him-to-shut-up-ronaldo-explains-furious-reaction-substitution-portugal-world-cup-defeat-south-korea/bltf2de10573a9f05e8
 
 [en.yna.co.kr]
-match = -110.0%%
-title = 122 ships affected by suspected N. Korean GPS jamming
-url = https://en.yna.co.kr/view/AEN20120504005000315
+match = -160.0%%
+title = (Olympics) Confusion reigns after chaotic finish in short ...
+url = https://en.yna.co.kr/view/AEN20180213013100315
 
 [www.vlr.gg]
 match = 5.6%%
