--- a/images/tui-warmdream-16/config.ini
+++ b/images/tui-warmdream-16/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/tui-warmdream-16.html
 lastopen = 2024-06-10 01:14:08
 
 [search]
-lastsearch = 2024-07-12 02:17:34
+lastsearch = 2024-07-12 03:29:20
 
 [www.tiktok.com]
-match = -6.2%%
-title = Huda Beauty Lip Stain
-url = https://www.tiktok.com/@thelipsticklesbians/video/7235411910361976106
+match = -243.8%%
+title = How I like to contour my lips #hudabeauty #foryou #beautytok ...
+url = https://www.tiktok.com/@hudabeauty/video/7267624422679334187
 
 [digitalmaine.com]
 match = -75.0%%
