CI images update

--- a/images/chieu-gap-dai-loan-16/config.ini
+++ b/images/chieu-gap-dai-loan-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-gap-dai-loan-16.html
 lastopen = 2024-06-09 21:46:43
 
 [search]
-lastsearch = 2024-07-12 03:20:28
+lastsearch = 2024-07-12 03:49:26
 
 [www.diepxuan.com]
 match = 19.0%%
@@ -142,9 +142,9 @@ title = Lịch chiếu
 url = https://chieuphimquocgia.com.vn/movies
 
 [vnexpress.net]
-match = -100.0%%
-title = Tiêm kích F-16 Đài Loan rơi - Tin tức mới nhất 24h qua
-url = https://vnexpress.net/tag/tiem-kich-f-16-dai-loan-roi-1020827
+match = -11.1%%
+title = topics-sitemap.xml
+url = https://vnexpress.net/topics-sitemap.xml?p=59
 
 [vietsuntravel.com]
 match = -28.6%%
@@ -162,9 +162,9 @@ title = CHiNH SACH HITOTNG NAM Nlin CUA DAI LOAN TRONG BOI ...
 url = http://113.165.166.110:81/bitstream/DL_134679/12657/1/CVv183S102019010.pdf
 
 [zingnews.vn]
-match = -128.6%%
-title = cho chet vi dai - Tin tức tức online 24h về chó chết vì dại
-url = https://zingnews.vn/chó-chết-vì-dại-tin-tuc/trang5.html?type=2
+match = -133.3%%
+title = gap go viet nam - Tin tức tức online 24h về gặp gỡ việt nam
+url = https://zingnews.vn/gặp-gỡ-việt-nam-tin-tuc/trang11.html?type=2
 
 [www.quora.com]
 match = -123.8%%
@@ -185,4 +185,9 @@ url = https://tka.tiki.vn/pixel?data=djAwMbeYZvZWIuB2QyIvlucoNCSmsdFL0OW-PLL8WLm
 match = -5.3%%
 title = news-2016-02-16.xml
 url = https://ngoisao.vn/sitemaps/news-2016-02-16.xml
+
+[www.qdnd.vn]
+match = -5.3%%
+title = news-06-04-2024.xml
+url = https://www.qdnd.vn/sitemaps/0/2024/04/news-06-04-2024.xml
 
