--- a/images/chieu-dieu-hoa-lua-co-goi-14/config.ini
+++ b/images/chieu-dieu-hoa-lua-co-goi-14/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-dieu-hoa-lua-co-goi-14.html
 lastopen = 2024-06-09 22:25:57
 
 [search]
-lastsearch = 2024-07-11 22:20:57
+lastsearch = 2024-07-12 03:45:16
 
 [shopee.vn]
 match = -3.6%%
@@ -32,9 +32,9 @@ title = Chiếu điều hòa có mát không? Review 10 ...
 url = https://tiki.vn/blog/chieu-dieu-hoa/
 
 [sieuthidem.vn]
-match = 53.6%%
-title = Chiếu điều hoà Tencel - Hà Nội
-url = https://sieuthidem.vn/product-category/chan-ga-goi/chieu-dieu-hoa-tencel/
+match = 32.1%%
+title = Bộ chiếu điều hoà Tencel TC01 - Hà Nội
+url = https://sieuthidem.vn/san-pham/bo-chieu-dieu-hoa-tencel-tc01/
 
 [kyoryo.vn]
 match = -35.7%%
