--- a/images/chieu-dieu-hoa-khong-goi-12/config.ini
+++ b/images/chieu-dieu-hoa-khong-goi-12/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-dieu-hoa-khong-goi-12.html
 lastopen = 2024-06-09 23:15:39
 
 [search]
-lastsearch = 2024-07-12 03:31:20
+lastsearch = 2024-07-12 04:20:58
 
 [demxanh.com]
 match = 25.9%%
@@ -12,9 +12,9 @@ title = Chiếu điều hòa Nhật Bản NEKIO chính hãng
 url = https://demxanh.com/chieu-dieu-hoa-nhat-ban-nekio-chinh-hang-nhat.html
 
 [shopee.vn]
-match = -18.5%%
-title = Chiếu điều hoà, ga giường cao su non không bí lưng ...
-url = https://shopee.vn/Chiếu-điều-hoà-ga-giường-cao-su-non-không-bí-lưng-HÀNG-LOẠI-1(TẶNG-2-VỎ-GỐI)-i.49163646.20104275799
+match = 18.5%%
+title = Chiếu Điều Hòa Giá Tốt, Chất Lượng, Đảm Bảo
+url = https://shopee.vn/list/chiếu điều hòa
 
 [goni.vn]
 match = 18.5%%
@@ -22,9 +22,9 @@ title = Chiếu Điều Hòa Goni - Ưu Đãi Tháng 07/2024
 url = https://goni.vn/chieu-dieu-hoa-goni/
 
 [russo.vn]
-match = 29.6%%
-title = Chiếu điều hòa cao su non 1m8x2m - Russo
-url = https://russo.vn/chieu-dieu-hoa-cao-su-1m8x2m/
+match = -37.0%%
+title = Chiếu điều hòa cao su non chính hãng đẹp nhất 2024 - Russo
+url = https://russo.vn/chieu-dieu-hoa-cao-su-non/
 
 [www.dienmayxanh.com]
 match = -48.1%%
@@ -75,4 +75,9 @@ url = https://www.lazada.vn/products/chieu-may-dieu-hoa-chieu-dieu-hoa-thong-hoi
 match = -40.7%%
 title = Chiếu điều hòa mát lạnh ĐỦ SIZE loại dày, chiếu mây có ...
 url = https://h5.lazada.vn/products/chieu-dieu-hoa-mat-lanh-du-size-loai-day-chieu-may-co-the-gap-gon-giup-ngu-ngon-hon-i557242724.html
+
+[thegioinem.com]
+match = 33.3%%
+title = 10+ mẫu chiếu điều hoà hot nhất năm
+url = https://thegioinem.com/top-chieu-dieu-hoa-hot-nhat-nam.html
 
