CI images update

--- a/images/man-in-hoa-dep-16/config.ini
+++ b/images/man-in-hoa-dep-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-in-hoa-dep-16.html
 lastopen = 2024-06-10 01:11:01
 
 [search]
-lastsearch = 2024-07-12 01:19:15
+lastsearch = 2024-07-12 04:30:26
 
 [www.tiktok.com]
 match = -170.6%%
@@ -69,7 +69,7 @@ url = https://www.pinterest.com/pin/1087971222468991265/
 [books.google.com]
 match = -217.6%%
 title = The new army list, by H.G. Hart [afterw.] Hart's army list. ...
-url = https://books.google.com/books?id=8-8NAAAAQAAJ&pg=RA1-PA596&lpg=RA1-PA596&dq=man+in+hoa+dep+16&source=bl&ots=2illVwt42J&sig=ACfU3U2zw1Uquw8W9IDQnHUw5XIZ_J79sA&hl=en&sa=X&ved=2ahUKEwirmrbnzJ-HAxU3kokEHenuAfcQ6AF6BAgTEAM
+url = https://books.google.com/books?id=8-8NAAAAQAAJ&pg=RA1-PA596&lpg=RA1-PA596&dq=man+in+hoa+dep+16&source=bl&ots=2illVxv--L&sig=ACfU3U3t29jGwUHBsyaQ_FQOcsyhD61zPQ&hl=en&sa=X&ved=2ahUKEwio7qnF95-HAxUOkokEHfWvCDEQ6AF6BAgWEAM
 
 [tax.vermont.gov]
 match = -29.4%%
