--- a/images/man-tu-bung-dinh-vuong-16/config.ini
+++ b/images/man-tu-bung-dinh-vuong-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-tu-bung-dinh-vuong-16.html
 lastopen = 2024-06-06 16:41:48
 
 [search]
-lastsearch = 2024-07-11 23:50:35
+lastsearch = 2024-07-12 04:34:50
 
 [munghoangphat.com]
 match = 48.0%%
@@ -17,14 +17,14 @@ title = Màn chụp tự bung đỉnh vuông tiến đạt hàng chính hãng, .
 url = https://tiki.vn/search?q=màn chụp tự bung đỉnh vuông tiến đạt
 
 [shopee.vn]
-match = -48.0%%
-title = màn chụp đỉnh vuông giá tốt Tháng 7, 2024 | Mua ngay
-url = https://shopee.vn/search?keyword=màn chụp đỉnh vuông
+match = -44.0%%
+title = Màn chụp tự bung chống muỗi đỉnh rộng người lớn 1m2 x ...
+url = https://shopee.vn/search?keyword=Màn+chụp+tự+bung+chống+muỗi+đỉnh+rộng+người+lớn+1m2+x+2m,+1m6+x+2m,+1m8+x+2m,+2m2+x+2m+-+Loại+2+cửa
 
 [www.mungbaobao.com]
-match = 24.0%%
-title = Mùng Tự Bung Đỉnh Vuông 1m8 x 2m Viền Chân
-url = https://www.mungbaobao.com/mung-tu-bung-dinh-vuong-1m8-x-2m-bao-bao.html
+match = 48.0%%
+title = Mùng Chụp Tự Bung Đỉnh Vuông 1m6 x 2m
+url = https://www.mungbaobao.com/mung-chup-tu-bung-dinh-vuong-1m6-x-2m.html
 
 [www.diepxuan.com]
 match = 100.0%%
