--- a/images/tui-warmdream-15/config.ini
+++ b/images/tui-warmdream-15/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tui-warmdream-15.html
 lastopen = 2024-06-10 00:24:28
 
 [search]
-lastsearch = 2024-07-11 23:15:03
+lastsearch = 2024-07-12 04:35:58
 
 [www.lazada.vn]
 match = -268.8%%
@@ -125,4 +125,9 @@ url = https://www.facebook.com/diepxuanco/?locale=nb_NO
 match = -262.5%%
 title = christian dior perfumes llc photos - christian dior fragrances list
 url = https://extenzee.com/bag/niqszwgm-271/
+
+[solamer.com]
+match = -50.0%%
+title = The Sol a Mer UPF 50+ Hat Story
+url = https://solamer.com/pages/story
 
