--- a/images/man-tu-bung-18/config.ini
+++ b/images/man-tu-bung-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-tu-bung-18.html
 lastopen = 2024-06-10 00:37:41
 
 [search]
-lastsearch = 2024-07-11 22:47:19
+lastsearch = 2024-07-12 04:44:48
 
 [shopee.vn]
 match = -171.4%%
@@ -19,7 +19,7 @@ url = https://mungthienmetta.com/mung-man-ngu-metta-tu-bung/new2021-mung-ngu-met
 [tiki.vn]
 match = -221.4%%
 title = Màn chụp tự bung đỉnh vuông, giá xưởng, hàng việt nam ...
-url = https://tiki.vn/man-chup-tu-bung-dinh-vuong-gia-xuong-hang-viet-nam-100-bao-hanh-18-thang-mung-tu-bung-cao-cap-p170076693.html?spid=175465914
+url = https://tiki.vn/man-chup-tu-bung-dinh-vuong-gia-xuong-hang-viet-nam-100-bao-hanh-18-thang-mung-tu-bung-cao-cap-p170076693.html?spid=175465922
 
 [manthutrang.com]
 match = -200.0%%
@@ -32,9 +32,9 @@ title = Mùng Chụp | Màn Tự Bung Thông Minh Chống Muỗi | Khuyến ...
 url = https://www.mantubung.com/
 
 [www.lazada.vn]
-match = -164.3%%
-title = Màn chụp tự bung đỉnh vuông Cao Cấp. Mùng gấp ...
-url = https://www.lazada.vn/products/man-chup-tu-bung-dinh-vuong-cao-cap-mung-gap-dinh-vuong-co-chan-vien-gia-tan-xuong-bh-18-thang-i1643502299.html
+match = -178.6%%
+title = Mùng /Màn Ngủ Tự Bung METTA - 1M2 x 1M9 - BH 18 tháng
+url = https://www.lazada.vn/products/mung-man-ngu-tu-bung-metta-1m2-x-1m9-bh-18-thang-hang-chinh-hang-viet-nam-xuat-khau-i691726583.html
 
 [www.mungbaobao.com]
 match = -214.3%%
