--- a/images/tui-warmdream-180x200x14/config.ini
+++ b/images/tui-warmdream-180x200x14/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tui-warmdream-180x200x14.html
 lastopen = 2024-06-17 10:46:26
 
 [search]
-lastsearch = 2024-07-12 01:20:13
+lastsearch = 2024-07-12 04:52:14
 
 [www.diepxuan.com]
 match = 10.5%%
@@ -35,4 +35,9 @@ url = https://bwca.com/messageboards/printThread.cfm?confId=1&forumId=15&threadI
 match = -70.8%%
 title = Long Flex Double Head Ratcheting Combo Wrenches
 url = https://www.garagejournal.com/forum/threads/long-flex-double-head-ratcheting-combo-wrenches.520279/
+
+[expeditionportal.com]
+match = -87.5%%
+title = Looking for a new family tent. Help please. | Page 3
+url = https://expeditionportal.com/forum/threads/looking-for-a-new-family-tent-help-please.82191/page-3
 
