--- a/images/chi-u-nh-a-thai-binh-10/config.ini
+++ b/images/chi-u-nh-a-thai-binh-10/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chi-u-nh-a-thai-binh-10.html
 lastopen = 2024-06-09 22:17:45
 
 [search]
-lastsearch = 2024-07-12 04:22:06
+lastsearch = 2024-07-12 04:46:33
 
 [www.vesselfinder.com]
 match = -91.3%%
@@ -22,9 +22,9 @@ title = Effect of the COVID-19 Outbreak on the Incidence of Other ...
 url = https://www.ncbi.nlm.nih.gov/pmc/articles/PMC8994859/
 
 [thuvienphapluat.vn]
-match = -73.9%%
-title = Nghị quyết 10/2022/NQ-HĐND định mức phân bổ vốn xây ...
-url = https://thuvienphapluat.vn/van-ban/Tai-chinh-nha-nuoc/Nghi-quyet-10-2022-NQ-HDND-dinh-muc-phan-bo-von-xay-dung-nong-thon-moi-Thai-Binh-2021-2025-527751.aspx
+match = -82.6%%
+title = Chỉ thị 10/CT-UBND 2021 chấn chỉnh tăng cường quản lý ...
+url = https://thuvienphapluat.vn/van-ban/Bat-dong-san/Chi-thi-10-CT-UBND-2021-chan-chinh-tang-cuong-quan-ly-nha-nuoc-ve-dat-dai-tinh-Thai-Binh-483501.aspx
 
 [sotuphap.thaibinh.gov.vn]
 match = 17.4%%
@@ -52,9 +52,9 @@ title = South China Sea
 url = https://en.wikipedia.org/wiki/South_China_Sea
 
 [books.google.com]
-match = -139.1%%
-title = Vietnam Travel Map Eighth Edition - Page 11 - Google Books Result
-url = https://books.google.com/books?id=ha6HCgAAQBAJ&pg=PA11&lpg=PA11&dq=chi+u+nh+a+thai+binh+10&source=bl&ots=qAz0Vf7hWx&sig=ACfU3U0jr6FRY9Gw9-aRDgdNkCHHuqvb2Q&hl=en&sa=X&ved=2ahUKEwiun_yq7p-HAxXrvokEHc0XDlcQ6AF6BAgjEAM
+match = -43.5%%
+title = Vietnam - Page 187 - Google Books Result
+url = https://books.google.com/books?id=kRi_BKq60OgC&pg=PA187&lpg=PA187&dq=chi+u+nh+a+thai+binh+10&source=bl&ots=UpYpZbaP4J&sig=ACfU3U1uLkxZZvRWzKSvI_iMp9WD340nxg&hl=en&sa=X&ved=2ahUKEwj1l4qS-5-HAxUKEVkFHcI0Ds4Q6AF6BAgeEAM
 
 [www.travelweekly.com]
 match = -87.0%%
@@ -122,8 +122,8 @@ title = Trường Đại học Y Dược Thái Bình
 url = https://tbump.edu.vn/
 
 [www.reddit.com]
-match = 30.4%%
-title = How to pronounce Thai Binh.
+match = -21.7%%
+title = How to pronounce Thai Binh. : r/Vietnamese
 url = https://www.reddit.com/r/Vietnamese/comments/1d5d9f4/how_to_pronounce_thai_binh/
 
 [www.macom.com]
