--- a/images/bo-ga-goi-chun-coco-18/config.ini
+++ b/images/bo-ga-goi-chun-coco-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/bo-ga-goi-chun-coco-18.html
 lastopen = 2024-06-09 23:53:28
 
 [search]
-lastsearch = 2024-07-12 04:47:47
+lastsearch = 2024-07-12 05:12:20
 
 [www.diepxuan.com]
 match = 4.5%%
@@ -12,14 +12,14 @@ title = Bộ ga chun coco 180x200 - Điệp Xuân
 url = https://www.diepxuan.com/bo-ga-chun-coco-180x200.html
 
 [shopee.vn]
-match = -68.2%%
-title = Bộ Ga Gối Nỉ Nhung COCO in Nổi Hoạ Tiết Mẫu Mới 2023 ...
-url = https://shopee.vn/Bộ-Ga-Gối-Nỉ-Nhung-COCO-in-Nổi-Hoạ-Tiết-Mẫu-Mới-2023-Chất-Liệu-Dày-Dặn-Mềm-Mịn-Ấm-Áp-Cao-Cấp-Giữ-Nhiệt-Tốt-i.29708084.23159379927
+match = 13.6%%
+title = Bộ Ga Gối Bo Chun Trần Phi Lụa Coco
+url = https://shopee.vn/product/494447407/24864025138
 
 [m.facebook.com]
-match = -68.2%%
-title = Chăn Ga Gối Đệm Giá rẻ | Chiếu cao su non coco bọc chun
-url = https://m.facebook.com/groups/300272311394846/posts/994679118620825/
+match = -100.0%%
+title = Bùng nổ với Ga Gối Coco... - H&T Bedding - Tổng Kho Phân Phối
+url = https://m.facebook.com/story.php/?story_fbid=222482430873756&id=100093360007450
 
 [hanvico.com.vn]
 match = 31.8%%
@@ -27,9 +27,9 @@ title = Bộ ga chun My Youth - MY18
 url = https://hanvico.com.vn/san-pham/bo-ga-chun-my-youth-my18/
 
 [www.lazada.vn]
-match = 27.3%%
-title = Ga gối chun nỉ COCO KHÔNG VIỀN
-url = https://www.lazada.vn/products/ga-goi-chun-ni-coco-khong-vien-i2477643141.html
+match = 9.1%%
+title = Bộ Ga Gối Màu Trơn Giá Tốt T03/2024
+url = https://www.lazada.vn/tag/bo-ga-goi-mau-tron/?page=2
 
 [www.instagram.com]
 match = -100.0%%
