--- a/images/ruot-goi-ke-everhome-mong/config.ini
+++ b/images/ruot-goi-ke-everhome-mong/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ruot-goi-ke-everhome-mong.html
 lastopen = 2024-06-10 00:15:54
 
 [search]
-lastsearch = 2024-07-11 20:35:52
+lastsearch = 2024-07-12 05:20:29
 
 [everhomevietnam.com]
 match = 12.0%%
@@ -48,8 +48,8 @@ url = https://cafef.vn/khai-truong-dem-xanh-vo-chi-cong-ruot-goi-gia-soc-chi-9-n
 
 [demhong.vn]
 match = -4.0%%
-title = Ruột gối đơn Sông Hồng chính hãng 45x65cm
-url = https://demhong.vn/ruot-goi-song-hong-45x65/
+title = Ruột gối ôm Sông Hồng khích thước 38×100
+url = https://demhong.vn/ruot-goi-om-song-hong-38x100/
 
 [demviethome.vn]
 match = 16.0%%
