--- a/images/man-ren-16/config.ini
+++ b/images/man-ren-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-ren-16.html
 lastopen = 2024-06-07 00:52:49
 
 [search]
-lastsearch = 2024-07-12 05:13:52
+lastsearch = 2024-07-12 05:45:34
 
 [quizlet.com]
 match = -170.0%%
@@ -54,7 +54,7 @@ url = https://en.wikipedia.org/wiki/List_of_acupuncture_points
 [books.google.com]
 match = -430.0%%
 title = Proceedings of the 10th West Coast Conference on Formal ...
-url = https://books.google.com/books?id=BQ93UeXC1_kC&pg=PA187&lpg=PA187&dq=man+ren+16&source=bl&ots=ftlepKJll7&sig=ACfU3U2SobeN_k5FhBHTBLnKrJb3ECVdVA&hl=en&sa=X&ved=2ahUKEwikl92fgaCHAxX1kIkEHf-DA9QQ6AF6BAgUEAM
+url = https://books.google.com/books?id=BQ93UeXC1_kC&pg=PA187&lpg=PA187&dq=man+ren+16&source=bl&ots=ftlepKKul9&sig=ACfU3U19orYOieipZtWSih_DrDRUCVDNmw&hl=en&sa=X&ved=2ahUKEwiu99mqiKCHAxWbkIkEHd5dDvYQ6AF6BAgUEAM
 
 [www.phillyvoice.com]
 match = 0.0%%
