--- a/images/man-tu-bung-20-22/config.ini
+++ b/images/man-tu-bung-20-22/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/man-tu-bung-20-22.html
 lastopen = 2024-06-09 23:31:04
 
 [search]
-lastsearch = 2024-07-11 23:16:44
+lastsearch = 2024-07-12 05:51:07
 
 [www.bible.com]
-match = -100.0%%
-title = MATHAIA 26 | MIZCLBSI Bible | YouVersion
-url = https://www.bible.com/bible/1048/MAT.26.MIZCLBSI
+match = 23.1%%
+title = sawltak 20:22
+url = https://www.bible.com/bible/368/ACT.20.22.TDB
 
 [mizobibleblog.wordpress.com]
 match = -123.5%%
