--- a/images/nem-lo-xo-techwood-16/config.ini
+++ b/images/nem-lo-xo-techwood-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/nem-lo-xo-techwood-16.html
 lastopen = 2024-06-10 01:29:52
 
 [search]
-lastsearch = 2024-07-12 04:16:21
+lastsearch = 2024-07-12 05:49:51
 
 [sieuthidemonline.vn]
 match = -19.0%%
@@ -32,9 +32,9 @@ title = Nệm lò xo TechWood 160x200x23 - Điệp Xuân
 url = https://www.diepxuan.com/nem-lo-xo-techwood-160x200x23.html
 
 [shopee.vn]
-match = -104.8%%
-title = Đệm lò xo tuấn anh - Giá Tốt, Miễn Phí Vận Chuyển, Đủ Loại
-url = https://shopee.vn/list/đệm lò xo/tuấn anh
+match = -61.9%%
+title = Đệm lò xo Techwood 180x200x25cm giá tốt Tháng 7, 2024
+url = https://shopee.vn/search?keyword=Đệm lò xo Techwood 180x200x25cm
 
 [demxanh.webflow.io]
 match = -61.9%%
