--- a/images/tham-ghe-da-dai/config.ini
+++ b/images/tham-ghe-da-dai/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tham-ghe-da-dai.html
 lastopen = 2024-06-07 00:36:57
 
 [search]
-lastsearch = 2024-07-12 04:49:32
+lastsearch = 2024-07-12 05:48:02
 
 [shopee.vn]
 match = -146.7%%
@@ -17,9 +17,9 @@ title = Bảng Giá Bàn Ghế Đá Năm 2024 [Cập Nhật 1 Giờ Trước]
 url = https://ghedagiago.com/bang-gia-bo-ban-ghe-da-san-vuon/
 
 [ghedatruongan.com]
-match = -37.5%%
-title = Sản phẩm
-url = https://ghedatruongan.com/san-pham/
+match = -86.7%%
+title = BẢNG GIÁ BÀN GHẾ ĐÁ TRƯỜNG AN NĂM 2024
+url = https://ghedatruongan.com/ban-ghe-da-gia-bao-nhieu/
 
 [ghedaviet.com]
 match = -93.3%%
