--- a/images/tham-nhung-bali-2m-3m/config.ini
+++ b/images/tham-nhung-bali-2m-3m/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tham-nhung-bali-2m-3m.html
 lastopen = 2024-06-09 22:34:54
 
 [search]
-lastsearch = 2024-07-12 04:18:56
+lastsearch = 2024-07-12 06:15:44
 
 [noithathomy.com]
 match = -42.9%%
@@ -24,7 +24,7 @@ url = https://www.lazada.vn/tag/tham-phong-khach-2m-x-3m/
 [tiki.vn]
 match = -128.6%%
 title = Thảm trải sàn, thảm lì Bali, thảm trang trí phòng khách 2m x ...
-url = https://tiki.vn/tham-trai-san-tham-li-bali-tham-trang-tri-phong-khach-2m-x-3m-p76292949.html
+url = https://tiki.vn/tham-trai-san-tham-li-bali-tham-trang-tri-phong-khach-2m-x-3m-p76292949.html/
 
 [muachunghaiphong.com]
 match = 0.0%%
