--- a/images/chan-hoi-mai-rua/config.ini
+++ b/images/chan-hoi-mai-rua/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/chan-hoi-mai-rua.html
 lastopen = 2024-06-09 23:40:13
 
 [search]
-lastsearch = 2024-07-12 04:28:16
+lastsearch = 2024-07-12 06:19:54
 
 [shopee.vn]
-match = -137.5%%
-title = Chăn cừu mai rùa siêu ấm kích thước 2mx2m3 nặng 2kg
-url = https://shopee.vn/Chăn-cừu-mai-rùa-siêu-ấm-kích-thước-2mx2m3-nặng-2kg-i.18553977.19585650220
+match = -162.5%%
+title = Chăn Lông Cừu Đại Hàn , Chăn cừu mai rùa siêu ấm kích ...
+url = https://shopee.vn/Chăn-Lông-Cừu-Đại-Hàn-Chăn-cừu-mai-rùa-siêu-ấm-kích-thước-2mx2m3-nặng~-3-8kg-Hàng-Loại-1-Cao-Cấp-Dày-3-Lớp-Siêu-Ấm-i.134729951.23858267538
 
 [www.instagram.com]
 match = 12.5%%
@@ -205,4 +205,9 @@ url = https://us.trip.com/travel-guide/attraction/hanoi/my-dinh-national-stadium
 match = -156.2%%
 title = Mai rùa có tác dụng gì? Tại sao đàn ông nên ăn ...
 url = https://www.nichieiasia.com/mai-rua-co-tac-dung-gi-tai-sao-dan-ong-nen-an-mai-rua-mem
+
+[www.diepxuan.com]
+match = 6.2%%
+title = Chăn cừu mai rùa - Điệp Xuân
+url = https://www.diepxuan.com/chan-cuu-mai-rua.html
 
