--- a/images/chi-u-nh-a-thai-binh-10/config.ini
+++ b/images/chi-u-nh-a-thai-binh-10/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chi-u-nh-a-thai-binh-10.html
 lastopen = 2024-06-09 22:17:45
 
 [search]
-lastsearch = 2024-07-12 05:14:28
+lastsearch = 2024-07-12 06:15:10
 
 [www.vesselfinder.com]
 match = -91.3%%
@@ -52,9 +52,9 @@ title = South China Sea
 url = https://en.wikipedia.org/wiki/South_China_Sea
 
 [books.google.com]
-match = -65.2%%
-title = National Geographic Collegiate Atlas of the World
-url = https://books.google.com/books?id=gMaha-3d6voC&pg=PA367&lpg=PA367&dq=chi+u+nh+a+thai+binh+10&source=bl&ots=E7OiDjzY9S&sig=ACfU3U2OwdcwGtijJ2TA1Hdkd67kVJyyAQ&hl=en&sa=X&ved=2ahUKEwjah-awgaCHAxV7CnkGHWMxBR0Q6AF6BAgfEAM
+match = -108.7%%
+title = A Threat to the Peace: North Viet-Nam's Effort to Conquer ...
+url = https://books.google.com/books?id=c5NQAQAAMAAJ&pg=RA1-PA96&lpg=RA1-PA96&dq=chi+u+nh+a+thai+binh+10&source=bl&ots=emSaQ2xNx7&sig=ACfU3U30rMM4gEQh6XLMyJDo5SQuelznhQ&hl=en&sa=X&ved=2ahUKEwi-juf5jqCHAxVzK0QIHZKjDx0Q6AF6BAgfEAM
 
 [www.travelweekly.com]
 match = -87.0%%
