--- a/images/chieu-dieu-hoa-co-goi-16/config.ini
+++ b/images/chieu-dieu-hoa-co-goi-16/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/chieu-dieu-hoa-co-goi-16.html
 lastopen = 2024-06-06 16:55:12
 
 [search]
-lastsearch = 2024-07-12 04:47:16
+lastsearch = 2024-07-12 06:22:18
 
 [shopee.vn]
-match = -50.0%%
-title = Chiếu điều hoà cao su non 3D chống nóng lưng kèm 2 vỏ ...
-url = https://shopee.vn/Chiếu-điều-hoà-cao-su-non-3D-chống-nóng-lưng-kèm-2-vỏ-gối-nằm-kích-thước-1m6x2m-1m8x2m-i.623633.16760413116
+match = -58.3%%
+title = Chiếu điều hòa mây {Loại 1 } đủ kích thước 90,1m,m2,m5 ...
+url = https://shopee.vn/Chiếu-điều-hòa-mây-Loại-1-đủ-kích-thước-90-1m-m2-m5-m6-m8-i.363378833.10726387786
 
 [www.diepxuan.com]
 match = 100.0%%
