--- a/images/chieu-truc-lieu-chau-16/config.ini
+++ b/images/chieu-truc-lieu-chau-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-truc-lieu-chau-16.html
 lastopen = 2024-06-07 00:19:53
 
 [search]
-lastsearch = 2024-07-12 05:52:24
+lastsearch = 2024-07-12 06:20:51
 
 [www.diepxuan.com]
 match = 100.0%%
@@ -17,14 +17,14 @@ title = Chiếu Tre Shikada Nhật Bản cao cấp 160x200cm - Kyoryo
 url = https://kyoryo.vn/chieu-cao-cap/chieu-tre-shikada-nhat-ban-cao-cap-160x200cm.html
 
 [chieutrelanlan.com]
-match = -4.3%%
-title = Chiếu trúc Việt nam - Thương hiệu Lan Lan
-url = https://chieutrelanlan.com/chieu-truc-p17.html?size=16
+match = -87.0%%
+title = Chia sẻ, kinh nghiệm sử dụng chiếu trúc, chiếu tre bền đẹp.
+url = https://chieutrelanlan.com/tim-hieu-ve-chieu-truc-n20.html
 
 [demxanh.com]
-match = -87.0%%
-title = Tư vấn mua chiếu trúc thanh chính hãng, giá rẻ tại Đệm Xanh
-url = https://demxanh.com/tu-van-mua-chieu-truc-thanh-chinh-hang-gia-re-tai-dem-xanh.html
+match = -30.4%%
+title = Mách bạn địa chỉ mua chiếu trúc tốt giá rẻ
+url = https://demxanh.com/mach-ban-dia-chi-mua-chieu-truc-tot-gia-re.html
 
 [www.dienmayxanh.com]
 match = -73.9%%
