--- a/images/ga-chun-uc-16/config.ini
+++ b/images/ga-chun-uc-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ga-chun-uc-16.html
 lastopen = 2024-06-10 01:12:04
 
 [search]
-lastsearch = 2024-07-12 05:14:16
+lastsearch = 2024-07-12 06:20:06
 
 [bedding.vn]
 match = -123.1%%
@@ -320,4 +320,9 @@ url = https://inspirehep.net/authors/1615126
 match = -138.5%%
 title = Cal Heads To Western Intercollegiate
 url = https://calbears.com/news/2024/4/14/mens-golf-cal-heads-to-western-intercollegiate.aspx
+
+[www.kaiyovietnam.vn]
+match = -223.1%%
+title = Ga chun trần sợi lạnh Kaiyo, màu xanh, kích thước ...
+url = https://www.kaiyovietnam.vn/ga-chun-tran-soi-lanh-kaiyo-mau-xanh-kich-thuoc-200x220cm
 
