--- a/images/nem-everon-120x200x9/config.ini
+++ b/images/nem-everon-120x200x9/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/nem-everon-120x200x9.html
 lastopen = 2024-06-06 17:09:43
 
 [search]
-lastsearch = 2024-07-12 05:52:02
+lastsearch = 2024-07-12 06:18:58
 
 [www.everonvn.vn]
 match = 20.0%%
@@ -17,9 +17,9 @@ title = Nệm Everon Ceramic
 url = https://everon.vip/nem-everon-ceramic
 
 [everonvn.com.vn]
-match = 20.0%%
-title = Bảng Giá Đệm Everon Năm 2024
-url = https://everonvn.com.vn/everon/344/bang-gia-dem-everon
+match = -105.0%%
+title = Đệm bông ép Everon Chính Hãng Hàn Quốc Giảm Giá ...
+url = https://everonvn.com.vn/everon/785/dem-bong-ep-everon-giam-gia
 
 [everonchinhhang.vn]
 match = 5.0%%
