--- a/images/tui-nem-korea-tuan-anh-16/config.ini
+++ b/images/tui-nem-korea-tuan-anh-16/config.ini
@@ -4,17 +4,17 @@ url = https://www.diepxuan.com/tui-nem-korea-tuan-anh-16.html
 lastopen = 2024-06-17 10:42:58
 
 [search]
-lastsearch = 2024-07-12 05:35:06
+lastsearch = 2024-07-12 06:33:22
 
 [tuananh.vn]
-match = 20.8%%
-title = Đệm Bông ép 2 mảnh Korea
-url = https://tuananh.vn/dem-bong-ep-2-manh-korea--p133.html
+match = 12.0%%
+title = Đệm bông Adaptive Fiber 3M
+url = https://tuananh.vn/dem-bong-adaptive-3m-p345.html
 
 [demxanh.com]
-match = -48.0%%
-title = [Cập nhật] Bảng giá đệm bông ép Tuấn Anh khuyến mại ...
-url = https://demxanh.com/bang-gia-dem-bong-ep-tuan-anh-2021.html
+match = -28.0%%
+title = Đệm bông ép Tuấn Anh Korea gấm Plus chính hãng
+url = https://demxanh.com/dem-bong-ep-tuan-anh-korea-gam-plus.html
 
 [shopee.vn]
 match = -40.0%%
