--- a/images/chieu-cay-ht-tre-em/config.ini
+++ b/images/chieu-cay-ht-tre-em/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-cay-ht-tre-em.html
 lastopen = 2024-06-06 16:42:52
 
 [search]
-lastsearch = 2024-07-11 22:16:56
+lastsearch = 2024-07-12 06:48:48
 
 [shopee.vn]
 match = -94.7%%
@@ -28,8 +28,8 @@ url = https://chieutrelinhchi.com/chieu-truc-1m6/chieu-truc-hat-nho-co-vien-mau-
 
 [www.youtube.com]
 match = -147.4%%
-title = Ò Ó O o Dậy Đi Thôi Mau Dậy Bạn Ơi - Bài Hát Bé Nghe Mỗi ...
-url = https://www.youtube.com/watch?v=_bALkbOOQfY
+title = Top 20 bài hát thiếu nhi hay nhất cho bé ăn ngon mỗi ngày ...
+url = https://www.youtube.com/watch?v=Rz-aUFahRA8
 
 [dochoihoangthu.com]
 match = -121.1%%
@@ -112,9 +112,9 @@ title = Chiếu Trẻ Em - Công ty TNHH Sản xuất và thương mại H&T
 url = https://huongtruc.com/chi-tiet/chieu-tre-em
 
 [chieutruc.info]
-match = -115.8%%
-title = Giá chiếu trúc tre Việt Nam năm 2024 - Chieutruc.inFo
-url = https://chieutruc.info/gia-chieu-truc-tre-viet-nam-2024/
+match = -68.4%%
+title = Chiếu Tăm H&T - Chiếu Thanh Hương Trúc cao cấp
+url = https://chieutruc.info/chieu-tam-ht/
 
 [shoptretho.com.vn]
 match = -126.3%%
