--- a/images/chieu-lac-d2-09/config.ini
+++ b/images/chieu-lac-d2-09/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-d2-09.html
 lastopen = 2024-06-21 06:29:43
 
 [search]
-lastsearch = 2024-07-12 04:49:20
+lastsearch = 2024-07-12 06:49:46
 
 [www.diepxuan.com]
 match = 100.0%%
@@ -77,8 +77,8 @@ title = Học cờ vua nâng cao
 url = https://www.cothongminh.com/tai-lieu-hoc-co-vua/26-hoc-co-vua-nang-cao?start=3
 
 [www.facebook.com]
-match = 0.0%%
-title = PHOTOTIMEVietnam
+match = -86.7%%
+title = PHOTOTIMEVietnam | Ho Chi Minh City
 url = https://www.facebook.com/phototimevn/
 
 [duhocdoubleh.edu.vn]
