--- a/images/chieu-lac-soc-12/config.ini
+++ b/images/chieu-lac-soc-12/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-soc-12.html
 lastopen = 2024-06-09 23:46:56
 
 [search]
-lastsearch = 2024-07-12 06:16:17
+lastsearch = 2024-07-12 06:44:32
 
 [shopee.vn]
 match = 25.0%%
@@ -99,7 +99,7 @@ url = https://www.vinmec.com/vi/y-hoc-co-truyen/suc-khoe-thuong-thuc/he-thong-ki
 [books.google.com]
 match = -218.8%%
 title = Gazetteer to AMS 1:250,000 Maps of Indochina (series L509).
-url = https://books.google.com/books?id=3gZclKX0dQYC&pg=PA272&lpg=PA272&dq=chieu+lac+soc+12&source=bl&ots=LZu5SW8zXg&sig=ACfU3U0Pa5-O8KiolVy6ZfO4LNrWUXa-VA&hl=en&sa=X&ved=2ahUKEwiS87uTupKHAxXEF1kFHWJqB9cQ6AF6BAgcEAM
+url = https://books.google.com/books?id=3gZclKX0dQYC&pg=PA272&lpg=PA272&dq=chieu+lac+soc+12&source=bl&ots=LZu5XT9BXh&sig=ACfU3U2pTQrLuhpYABSTDcCaCAj3E3SyyQ&hl=en&sa=X&ved=2ahUKEwiZzubBlaCHAxU7EUQIHU5gBzcQ6AF6BAgeEAM
 
 [baovinhlong.vn]
 match = -137.5%%
