--- a/images/ruot-nem-korea-9f-15-19/config.ini
+++ b/images/ruot-nem-korea-9f-15-19/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ruot-nem-korea-9f-15-19.html
 lastopen = 2024-06-10 00:18:43
 
 [search]
-lastsearch = 2024-07-12 04:17:06
+lastsearch = 2024-07-12 06:45:44
 
 [www.diepxuan.com]
 match = -60.9%%
@@ -22,14 +22,14 @@ title = notice on public participation & accessibility
 url = https://www.southpasadenaca.gov/files/assets/public/v/1/police/documents/agenda-packet-combined-092.pdf
 
 [en.wikipedia.org]
-match = -72.7%%
-title = Kristi Noem
-url = https://en.wikipedia.org/wiki/Kristi_Noem
+match = -58.3%%
+title = Nam Joo-hyuk
+url = https://en.wikipedia.org/wiki/Nam_Joo-hyuk
 
 [www.facebook.com]
-match = -87.0%%
-title = Veterans of Foreign Wars - VFW : Yonkers NY: Post 1666
-url = https://www.facebook.com/VFWPost1666/
+match = -13.0%%
+title = U.S. Army Pacific | Honolulu HI
+url = https://www.facebook.com/USARPAC/
 
 [www.cia.gov]
 match = -82.6%%
@@ -134,7 +134,7 @@ url = https://30rates.com/riot-stock
 [www.google.com]
 match = 0.0%%
 title = 
-url = https://www.google.com/search?sca_esv=15a9157023f07e80&q=Did+Nam+Joo+Hyuk+go+to+college?&sa=X&ved=2ahUKEwjn1dvH9J-HAxX6kIkEHaK9B-QQsZYEegQIGBAC
+url = https://www.google.com/search?sca_esv=cbc386de4b870031&q=Did+Nam+Joo+Hyuk+go+to+college?&sa=X&ved=2ahUKEwibwf_jlaCHAxWVMUQIHVPrAxYQsZYEegQIFRAC
 
 [www.iri.org]
 match = -65.2%%
