--- a/images/ruot-goi-ke-korea/config.ini
+++ b/images/ruot-goi-ke-korea/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ruot-goi-ke-korea.html
 lastopen = 2024-06-10 00:58:26
 
 [search]
-lastsearch = 2024-07-12 05:13:29
+lastsearch = 2024-07-12 09:05:36
 
 [www.diepxuan.com]
 match = -64.7%%
@@ -95,4 +95,9 @@ url = https://www.sieuthinem.vn/ruot-goi-truyen-thong-everon-standard.html
 match = -123.5%%
 title = Ruột gối ôm ép hơi - Ruột gối tựa Korea Tuấn Anh - gom
 url = https://www.sendo.vn/ruot-goi-om-ep-hoi-ruot-goi-tua-korea-tuan-anh-18894572.html
+
+[nemvietchat.com]
+match = -17.6%%
+title = Gối ôm bông - Nệm Việt Chất
+url = https://nemvietchat.com/goi-om-bong-dvhe3234
 
