--- a/images/nem-sieu-nhe-5f-14/config.ini
+++ b/images/nem-sieu-nhe-5f-14/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/nem-sieu-nhe-5f-14.html
 lastopen = 2024-06-09 23:19:00
 
 [search]
-lastsearch = 2024-07-12 03:49:57
+lastsearch = 2024-07-12 09:05:25
 
 [tuhung.net]
 match = -116.7%%
@@ -37,8 +37,8 @@ title = Cộng Đồng Người Việt Wyoming, USA | 👉Khách oder ib ...
 url = https://www.facebook.com/groups/3210946518964907/posts/khách-oder-ib-messenger-giúp-em-nhé-bánh-nậm-huế-bánh-bột-lọc-huế-chả-huế-mini-n/8015008918558619/
 
 [www.airbnb.com.vn]
-match = -177.8%%
-title = Nơi nghỉ dưỡng cho thuê là nhà phố tại Tainan City - Airbnb
+match = -211.1%%
+title = Nơi nghỉ dưỡng cho thuê là nhà phố tại Tainan City - Đài Loan ...
 url = https://www.airbnb.com.vn/tainan-city-taiwan/stays/townhouses
 
 [www.runragnar.com]
@@ -52,8 +52,8 @@ title = Giá nệm topper foam ở đâu rẻ nhất tháng 06/2024 - Trang 14 -
 url = https://sieuthicholon.com/tag/nem-topper-foam-ti/?trang=14
 
 [www.diepxuan.com]
-match = 20.0%%
-title = Nệm - Điệp Xuân
+match = -7.7%%
+title = Điệp Xuân Nệm
 url = https://www.diepxuan.com/catalog/category/view/s/nem/id/773/
 
 [m.facebook.com]
