CI images update

--- a/images/chan-5-kg-kq-song/config.ini
+++ b/images/chan-5-kg-kq-song/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chan-5-kg-kq-song.html
 lastopen = 2024-06-09 23:17:50
 
 [search]
-lastsearch = 2024-07-12 02:29:47
+lastsearch = 2024-07-12 10:18:17
 
 [en.wikipedia.org]
 match = -16.7%%
@@ -34,7 +34,7 @@ url = https://www.ncbi.nlm.nih.gov/pmc/articles/PMC9317998/
 [books.google.com]
 match = -11.8%%
 title = Cumulated Index Medicus
-url = https://books.google.com/books?id=KlBiDKi_dngC&pg=PA5960&lpg=PA5960&dq=chan+5+kg+kq+song&source=bl&ots=BOWUKJ0n5g&sig=ACfU3U1p5ZUptIMoPZYMcyltaRdm24oIUA&hl=en&sa=X&ved=2ahUKEwjC0pLJ3J-HAxUVk4kEHZH1BQsQ6AF6BAgqEAM
+url = https://books.google.com/books?id=KlBiDKi_dngC&pg=PA5960&lpg=PA5960&dq=chan+5+kg+kq+song&source=bl&ots=BOWUKM_o6g&sig=ACfU3U0tGLyvifmj7QjCB0qg8Z3bAqKw4w&hl=en&sa=X&ved=2ahUKEwiDl5ulxaCHAxXYFFkFHazjBWAQ6AF6BAg4EAM
 
 [www.ateezstoryline.com]
 match = 0.0%%
