--- a/images/khan-tay-dada-khach-san-343460g/config.ini
+++ b/images/khan-tay-dada-khach-san-343460g/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/khan-tay-dada-khach-san-343460g.html
 lastopen = 2024-06-07 00:48:27
 
 [search]
-lastsearch = 2024-07-12 09:41:00
+lastsearch = 2024-07-12 10:22:14
 
 [www.diepxuan.com]
 match = 93.5%%
@@ -37,7 +37,12 @@ title = Kezang Dorji - Haa-Episode 23/25-The Kuzuzangpo Tour 2...
 url = https://m.facebook.com/kezangdorjiofficial/posts/2088879798078527/?comment_id=2095098467456660&reply_comment_id=2095474554085718&comment_tracking={"tn":"R"}
 
 [www.youtube.com]
-match = -54.8%%
-title = Delicious dinner at highway's famous dhaba hotel| Punjabi ...
-url = https://www.youtube.com/watch?v=nc_uBk2xZGQ
+match = -29.0%%
+title = Khana Khaia Kahan Par Oye Hoye@BataProductionOfficial
+url = https://www.youtube.com/watch?v=-uStS5BS2gE
+
+[m.youtube.com]
+match = 3.2%%
+title = NIGHT STAY DADI K GHAR😍|KINZA NA SAB KO TUNG ...
+url = https://m.youtube.com/watch?v=RqKOzucsHWk
 
