--- a/images/man-re-xanh-10/config.ini
+++ b/images/man-re-xanh-10/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-re-xanh-10.html
 lastopen = 2024-06-07 00:54:04
 
 [search]
-lastsearch = 2024-07-12 09:00:39
+lastsearch = 2024-07-12 10:15:31
 
 [screenrant.com]
 match = 0.0%%
@@ -390,4 +390,9 @@ url = https://www.huntinfool.com/articles/topic/diy/the-old-mans-10-rule
 match = -21.4%%
 title = Ice Skating & Hockey
 url = https://evergreenrecreation.com/224/Ice-Skating-Hockey
+
+[www.ebay.com]
+match = -185.7%%
+title = Green Sweet Layered WAX APPLE Man Xanh Tam Hoa ...
+url = https://www.ebay.com/itm/395315782184
 
