--- a/images/chieu-cay-ht-tre-em/config.ini
+++ b/images/chieu-cay-ht-tre-em/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-cay-ht-tre-em.html
 lastopen = 2024-06-06 16:42:52
 
 [search]
-lastsearch = 2024-07-12 06:48:48
+lastsearch = 2024-07-12 10:17:20
 
 [shopee.vn]
 match = -94.7%%
@@ -28,8 +28,8 @@ url = https://chieutrelinhchi.com/chieu-truc-1m6/chieu-truc-hat-nho-co-vien-mau-
 
 [www.youtube.com]
 match = -147.4%%
-title = Top 20 bài hát thiếu nhi hay nhất cho bé ăn ngon mỗi ngày ...
-url = https://www.youtube.com/watch?v=Rz-aUFahRA8
+title = Nhạc Thiếu Nhi Tập Thể Dục Buổi Sáng, Cá Vàng Bơi, Con ...
+url = https://www.youtube.com/watch?v=aW3qoZeqHik
 
 [dochoihoangthu.com]
 match = -121.1%%
