--- a/images/giuong-mn-1/config.ini
+++ b/images/giuong-mn-1/config.ini
@@ -4,16 +4,16 @@ url = https://www.diepxuan.com/giuong-mn-1.html
 lastopen = 2024-06-07 00:35:37
 
 [search]
-lastsearch = 2024-07-12 05:35:38
+lastsearch = 2024-07-12 10:21:31
 
 [phana.com.vn]
-match = -90.9%%
-title = MN-G1-Giường 1 tay quay có bô
-url = https://phana.com.vn/mn-g1-giuong-1-tay-quay-co-bo
+match = 63.6%%
+title = Giường bệnh
+url = https://phana.com.vn/giuong-benh
 
 [tiki.vn]
-match = -190.9%%
-title = Giường 1,8mx2m hàng chính hãng, giao nhanh
+match = -254.5%%
+title = Giường 1,8mx2m hàng chính hãng, giao nhanh - Tiki
 url = https://tiki.vn/search?q=giường 1,8mx2m
 
 [www.facebook.com]
@@ -27,9 +27,9 @@ title = giương mn 1
 url = https://www.diepxuan.com/giuong-mn-1.html
 
 [giuonggaphoaphat.com]
-match = -27.3%%
-title = Giuonggaphoaphat.com
-url = http://giuonggaphoaphat.com/
+match = -81.8%%
+title = GIƯỜNG GẤP NHẬP KHẨU NHẬT BẢN
+url = http://giuonggaphoaphat.com/giuong-nhap-khau-nhat-ban
 
 [noithatdogodungduyen.com]
 match = -136.4%%
