--- a/images/man-ren-14/config.ini
+++ b/images/man-ren-14/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-ren-14.html
 lastopen = 2024-06-06 17:06:44
 
 [search]
-lastsearch = 2024-07-12 02:50:00
+lastsearch = 2024-07-12 10:16:05
 
 [www.youtube.com]
 match = -500.0%%
@@ -27,9 +27,9 @@ title = Mystery Champion REN-14 Compressor Pump
 url = https://www.garagejournal.com/forum/threads/mystery-champion-ren-14-compressor-pump.386871/
 
 [en.wikipedia.org]
-match = -120.0%%
-title = List of acupuncture points
-url = https://en.wikipedia.org/wiki/List_of_acupuncture_points
+match = 12.5%%
+title = Ren Keyu
+url = https://en.wikipedia.org/wiki/Ren_Keyu
 
 [twitter.com]
 match = -430.0%%
@@ -240,4 +240,9 @@ url = https://go.gale.com/ps/i.do?id=GALE|A376509956&sid=googleScholar&v=2.1&it=
 match = -130.0%%
 title = The Directing Vessel/ Ren Mai
 url = https://acupunctureismylife.com/the-directing-vessel-ren-mai/
+
+[www.republicworld.com]
+match = -420.0%%
+title = At 14, China's Ren Keyu named the world's tallest male ...
+url = https://www.republicworld.com/entertainment/at-14-chinas-ren-keyu-named-the-worlds-tallest-male-teenager-standing-7-3-tall
 
