CI images update

--- a/images/tham-bali-180x230/config.ini
+++ b/images/tham-bali-180x230/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tham-bali-180x230.html
 lastopen = 2024-06-07 00:36:20
 
 [search]
-lastsearch = 2024-07-12 09:40:49
+lastsearch = 2024-07-12 10:35:16
 
 [www.noithatpassion.com]
 match = -129.4%%
@@ -35,4 +35,24 @@ url = https://tiki.vn/search?q=mền chần gòn toto tt52780 (180 x 230 cm)
 match = -64.7%%
 title = 797 регион это откуда [vespjE]
 url = https://www.tles.tyc.edu.tw/instpage.php?=LoginId,LogoffReason,PunchTime&h=1200&r=0&url=https://xn--80adyaqv.xn--p1ai/5813267pam4r3v53xy275comafe88y
+
+[www.instagram.com]
+match = -188.2%%
+title = ♡ TISHY ୨₍ᐢ.ˬ.ᐢ₎୧ | these bali sunset photos deserve a ...
+url = https://www.instagram.com/tishtuazon/p/CxxdaTGPYur/?img_index=1
+
+[m.facebook.com]
+match = -247.1%%
+title = Bali expats | Are there different size scooters available on ...
+url = https://m.facebook.com/groups/expatsbali/permalink/1155818137794400/
+
+[www.tripadvisor.com]
+match = -188.2%%
+title = Bali sunset - All You Need to Know BEFORE You Go (2024)
+url = https://www.tripadvisor.com/Attraction_Review-g13792473-d4342095-Reviews-Bali_sunset-Bali_New_Taipei.html
+
+[www.pinterest.com]
+match = -217.6%%
+title = Our front yard for a few days on Bali! In the tiny town of ...
+url = https://www.pinterest.com/pin/our-front-yard-for-a-few-days-on-bali-in-the-tiny-town-of-amed-which-exists-as-far-as-i-can-tell-solely-for-fishing-and-diving--668010557217694485/
 
