--- a/images/bo-bon-mua-chun-chan-1602m/config.ini
+++ b/images/bo-bon-mua-chun-chan-1602m/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/bo-bon-mua-chun-chan-1602m.html
 lastopen = 2024-06-07 01:32:26
 
 [search]
-lastsearch = 2024-07-12 05:44:10
+lastsearch = 2024-07-12 10:35:47
 
 [everon.online]
 match = 19.2%%
@@ -39,7 +39,7 @@ url = https://www.tiktok.com/discover/thuyovet
 [books.google.com]
 match = -103.8%%
 title = Roster, Legislatures of Hawaii, 1841-1918: Constitutions of ...
-url = https://books.google.com/books?id=FHTf1B3ypPQC&pg=PT5&lpg=PT5&dq=bo+bon+mua+chun+chan+1602m&source=bl&ots=zGiTXFuG2B&sig=ACfU3U0f5xbx0NFx62iWycp_yDzZl7ONgw&hl=en&sa=X&ved=2ahUKEwi1mKennp-HAxW_MVkFHbBuCBgQ6AF6BAgTEAM
+url = https://books.google.com/books?id=FHTf1B3ypPQC&pg=PT5&lpg=PT5&dq=bo+bon+mua+chun+chan+1602m&source=bl&ots=zGiTXKqF-G&sig=ACfU3U392aIuHtra72l0uaH_sWLajjtdTg&hl=en&sa=X&ved=2ahUKEwiFto6ayaCHAxWOEFkFHc0IDsoQ6AF6BAgUEAM
 
 [everonchinhhang.vn]
 match = -19.2%%
@@ -260,4 +260,9 @@ url = http://weeklyrentals.com/dorunit.cgi?url=xn--80aaflte4h.xn--p1ai/sXAxDw6fe
 match = -57.7%%
 title = Hoạt động truyền bá kinh điển Phật giáo ở Đàng Trong ...
 url = https://baomoi.com/hoat-dong-truyen-ba-kinh-dien-phat-giao-o-dang-trong-the-ky-xvi-xviii-noi-dung-va-dac-diem-c49603756.epi
+
+[nguhanhson.danang.gov.vn]
+match = 24.0%%
+title = Mỹ An mừng Đảng, đón Xuân
+url = https://nguhanhson.danang.gov.vn/chi-tiet-tin-tuc?dinhdanh=8813003&cat=1602
 
