--- a/images/tham-giuong-ii-160x200/config.ini
+++ b/images/tham-giuong-ii-160x200/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tham-giuong-ii-160x200.html
 lastopen = 2024-06-17 21:09:12
 
 [search]
-lastsearch = 2024-07-12 04:22:30
+lastsearch = 2024-07-12 10:35:36
 
 [www.diepxuan.com]
 match = 36.4%%
@@ -12,9 +12,9 @@ title = Điệp Xuân Thảm giường Bode 160x200
 url = https://www.diepxuan.com/tham-giuong-bode-160x200.html
 
 [demxanh.com]
-match = 0.0%%
-title = Thảm trải giường cao su non màu ghi
-url = https://demxanh.com/tham-trai-giuong-cao-su-non-mau-ghi.html
+match = -4.5%%
+title = Thảm trải giường cao su non màu hồng
+url = https://demxanh.com/tham-trai-giuong-cao-su-non-mau-hong.html
 
 [www.lazada.vn]
 match = -122.7%%
