--- a/images/tui-warmdream-16/config.ini
+++ b/images/tui-warmdream-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tui-warmdream-16.html
 lastopen = 2024-06-10 01:14:08
 
 [search]
-lastsearch = 2024-07-12 07:55:19
+lastsearch = 2024-07-12 10:30:26
 
 [www.tiktok.com]
 match = -243.8%%
@@ -129,7 +129,7 @@ url = https://www.instagram.com/steam.and.gears/p/C8LihWoMnYq/
 [www.facebook.com]
 match = -25.0%%
 title = Chăn ga gối đệm Điệp Xuân
-url = https://www.facebook.com/diepxuanco/?locale=nb_NO
+url = https://www.facebook.com/diepxuanco/?locale=lv_LV
 
 [www.espn.com]
 match = -93.8%%
