--- a/images/vo-goi-epm20065-45x65/config.ini
+++ b/images/vo-goi-epm20065-45x65/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/vo-goi-epm20065-45x65.html
 lastopen = 2024-07-07 18:08:23
 
 [search]
-lastsearch = 2024-07-12 03:13:37
+lastsearch = 2024-07-12 10:33:27
 
 [www.diepxuan.com]
-match = 9.5%%
-title = Vỏ gối kê xoa 45x65 - Điệp Xuân
-url = https://www.diepxuan.com/vo-goi-ke-xoa-45x65.html
+match = -19.0%%
+title = Vỏ gối kê WarmDream 45x65 HQ - Điệp Xuân
+url = https://www.diepxuan.com/vo-goi-ke-warmdream-45x65-hq.html
 
 [tiki.vn]
 match = -81.0%%
