--- a/images/bo-ga-goi-chun-chan-happy-16/config.ini
+++ b/images/bo-ga-goi-chun-chan-happy-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/bo-ga-goi-chun-chan-happy-16.html
 lastopen = 2024-06-06 16:51:08
 
 [search]
-lastsearch = 2024-07-12 06:36:16
+lastsearch = 2024-07-12 11:36:45
 
 [www.diepxuan.com]
 match = 100.0%%
@@ -22,9 +22,9 @@ title = bộ ga chun poly giá tốt Tháng 7, 2024 | Mua ngay
 url = https://shopee.vn/search?keyword=bộ ga chun poly
 
 [chandem.com.vn]
-match = 17.9%%
-title = Bộ chăn ga gối Happy Wedding Solid 84
-url = https://chandem.com.vn/san-pham/bo-chan-ga-goi-solid-84/
+match = 21.4%%
+title = Bộ chăn ga gối Litter Girl Ctt112
+url = https://chandem.com.vn/san-pham/bo-chan-ga-goi-ctt112/
 
 [demxanh.com]
 match = 0.0%%
@@ -105,4 +105,9 @@ url = https://everon.online/blogs/news/bo-ga-chun-chan-everon-bon-mua-bo-ga-boc-
 match = 0.0%%
 title = Bộ Ga chun Modar
 url = https://uannga.vn/index.php/shops/Chan-Ga-Dreamland/bo-ga-chun-chan-modar-160-200.html
+
+[demviet.vn]
+match = 17.4%%
+title = Chăn Ga Chun - ĐỆM VIỆT
+url = https://demviet.vn/chan-ga-chun
 
