--- a/images/chi-u-nh-a-thai-binh-10/config.ini
+++ b/images/chi-u-nh-a-thai-binh-10/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chi-u-nh-a-thai-binh-10.html
 lastopen = 2024-06-09 22:17:45
 
 [search]
-lastsearch = 2024-07-12 09:04:19
+lastsearch = 2024-07-12 11:31:05
 
 [www.vesselfinder.com]
 match = -91.3%%
@@ -300,4 +300,9 @@ url = https://storage-vnportal.vnpt.vn/cmu-sgddt/6228/Nam2023/ho-tro-phuc-vu-le-
 match = -82.6%%
 title = Dạy bù trong ngày nghỉ lễ ở Thái Bình: Hiệu trưởng phải ...
 url = https://suckhoedoisong.vn/hoc-bu-trong-ngay-nghi-le-o-thai-binh-hieu-truong-phai-chiu-trach-nhiem-169240420154135404.htm
+
+[tuoitrenews.vn]
+match = -82.6%%
+title = 100 students join military course in southern Vietnam
+url = https://tuoitrenews.vn/news/education/20240711/100-students-join-military-course-in-southern-vietnam/80893.html
 
