--- a/images/chieu-gap-dai-loan-lua-15/config.ini
+++ b/images/chieu-gap-dai-loan-lua-15/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-gap-dai-loan-lua-15.html
 lastopen = 2024-06-09 21:46:38
 
 [search]
-lastsearch = 2024-07-12 05:44:33
+lastsearch = 2024-07-12 11:35:58
 
 [shopee.vn]
 match = -8.0%%
@@ -12,9 +12,9 @@ title = BẢN LỀ GẬP THÔNG MINH ĐÀI LOAN CHỊU LỰC 80KG
 url = https://shopee.vn/BẢN-LỀ-GẬP-THÔNG-MINH-ĐÀI-LOAN-CHỊU-LỰC-80KG-LOẠI-CAO-CẤP-INOX-BẢN-DÀY-CHẮC-CHẮN-GIÁ-ĐỠ-GẤP-BÀN-TREO-TƯỜNG-XẾP-GỌN-i.120824980.3158643972
 
 [tiki.vn]
-match = -28.0%%
-title = Mua Chiếu trúc thanh gập đôi Đài Loan mặt trúc mặt lụa
-url = https://tiki.vn/chieu-truc-thanh-gap-doi-dai-loan-mat-truc-mat-lua-p10764702.html?spid=25962892
+match = -16.0%%
+title = Chiếu trúc đài loan hàng chính hãng, giao nhanh
+url = https://tiki.vn/search?q=chiếu trúc đài loan
 
 [hoanglongcms.com]
 match = -24.0%%
