--- a/images/chieu-lac-soc-08/config.ini
+++ b/images/chieu-lac-soc-08/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-soc-08.html
 lastopen = 2024-06-06 16:42:06
 
 [search]
-lastsearch = 2024-07-12 06:36:27
+lastsearch = 2024-07-12 11:37:37
 
 [www.diepxuan.com]
 match = 100.0%%
@@ -17,9 +17,9 @@ title = Hướng dẫn đo size lắc và vòng tay
 url = https://www.pnj.com.vn/blog/huong-dan-do-size-lac-va-vong-tay/
 
 [www.facebook.com]
-match = -218.8%%
-title = 08-06-2024 Thời sự chiều 18h30 | 08-06-2024 Thời sự chiều ...
-url = https://www.facebook.com/soctrangtv/videos/08-06-2024-thời-sự-chiều-18h30/840287204820537/
+match = -131.2%%
+title = CHƯƠNG TRÌNH LỤC LẠC VÀNG VẾ VỚI XÃ MỸ THUẬN ...
+url = https://www.facebook.com/soctrangtv/videos/chương-trình-lục-lạc-vàng-vế-với-xã-mỹ-thuận-huyện-mỹ-tú-tỉnh-sóc-trăng-phát-són/1649583821733030/
 
 [thuvienphapluat.vn]
 match = -206.2%%
@@ -317,9 +317,9 @@ title = PHÒNG CHIẾU CHARLOTTE
 url = https://www.lottecinemavn.com/LCHS/Contents/Event/infomation-delivery-event.aspx?EventID=201010000623028
 
 [www.dcine.vn]
-match = 20.0%%
-title = DCINE Sóc Trăng
-url = https://www.dcine.vn/rap/dcine-soc-trang-1.html
+match = -25.0%%
+title = Lịch Chiếu Tại Rạp Phim Dcine
+url = https://www.dcine.vn/lich-chieu/dcine-ben-thanh-2.html
 
 [nimpe.vn]
 match = -106.2%%
