--- a/images/man-in-hoa-dep-16/config.ini
+++ b/images/man-in-hoa-dep-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-in-hoa-dep-16.html
 lastopen = 2024-06-10 01:11:01
 
 [search]
-lastsearch = 2024-07-12 10:21:17
+lastsearch = 2024-07-12 11:34:18
 
 [www.tiktok.com]
 match = -170.6%%
@@ -67,9 +67,9 @@ title = Chiêm ngưỡng mùa hoa cực đẹp ở Hà Giang vào tháng 03
 url = https://www.pinterest.com/pin/1087971222468991265/
 
 [books.google.com]
-match = -123.5%%
-title = The army list - Page 463 - Google Books Result
-url = https://books.google.com/books?id=YvANAAAAQAAJ&pg=RA1-PA463&lpg=RA1-PA463&dq=man+in+hoa+dep+16&source=bl&ots=KC67qqLRRL&sig=ACfU3U0l8WiPRNcen3mzH6w_PBpRwNNYkw&hl=en&sa=X&ved=2ahUKEwjCspz7xaCHAxVBFVkFHTaDCJMQ6AF6BAgTEAM
+match = -194.1%%
+title = Diccionario geográfico universal, 6: dedicado a la Reina ...
+url = https://books.google.com/books?id=SzAlAxSBB94C&pg=PA131&lpg=PA131&dq=man+in+hoa+dep+16&source=bl&ots=MsaxYEKie6&sig=ACfU3U0yheLiyTg3UDJ-HbWwoXDXBYXNPw&hl=en&sa=X&ved=2ahUKEwjFtvCj1qCHAxUmEkQIHQ_5BFEQ6AF6BAgmEAM
 
 [tax.vermont.gov]
 match = -29.4%%
@@ -430,4 +430,9 @@ url = https://hhlawoffice.com/basics-of-colorado-homeowners-association-hoa-law/
 match = 0.0%%
 title = 
 url = https://www.cedarmanagementgroup.com/duties-of-an-hoa-president/
+
+[billingsrpm.com]
+match = -200.0%%
+title = Vacancy List | Apartments and Houses for Rent in Billings, ...
+url = https://billingsrpm.com/vacancy-list/
 
