--- a/images/man-tu-bung-dinh-vuong-16/config.ini
+++ b/images/man-tu-bung-dinh-vuong-16/config.ini
@@ -4,22 +4,22 @@ url = https://www.diepxuan.com/man-tu-bung-dinh-vuong-16.html
 lastopen = 2024-06-06 16:41:48
 
 [search]
-lastsearch = 2024-07-12 05:45:47
+lastsearch = 2024-07-12 11:39:42
 
 [munghoangphat.com]
-match = 48.0%%
-title = màn chụp đỉnh vuông tự bung
-url = https://munghoangphat.com/man-chup-dinh-vuong-tu-bung/
+match = 12.0%%
+title = Mùng chụp tự bung ĐỈNH VUÔNG không viền chân
+url = https://munghoangphat.com/mung-chup-tu-bung-dinh-vuong-khong-vien-chan-vien-xanh.html
 
 [tiki.vn]
-match = -36.0%%
-title = Màn chụp tự bung đỉnh vuông tiến đạt hàng chính hãng, ...
-url = https://tiki.vn/search?q=màn chụp tự bung đỉnh vuông tiến đạt
+match = -28.0%%
+title = Màn bung 16m có đáy hàng chính hãng, giao nhanh
+url = https://tiki.vn/search?q=màn bung 16m có đáy
 
 [shopee.vn]
-match = -44.0%%
-title = Màn chụp tự bung chống muỗi đỉnh rộng người lớn 1m2 x ...
-url = https://shopee.vn/search?keyword=Màn+chụp+tự+bung+chống+muỗi+đỉnh+rộng+người+lớn+1m2+x+2m,+1m6+x+2m,+1m8+x+2m,+2m2+x+2m+-+Loại+2+cửa
+match = -36.0%%
+title = Mùng chụp tự bung đỉnh vuông cao cấp khóa to mắt dày ...
+url = https://shopee.vn/Mùng-chụp-tự-bung-đỉnh-vuông-cao-cấp-khóa-to-mắt-dày-dặn-màn-chụp-xếp-gọn-nhiều-size-i.116277580.6522803157
 
 [www.mungbaobao.com]
 match = 48.0%%
