--- a/images/nem-caosu-thien-nhien-140x200x10-felix/config.ini
+++ b/images/nem-caosu-thien-nhien-140x200x10-felix/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/nem-caosu-thien-nhien-140x200x10-felix.html
 lastopen = 2024-06-07 00:21:32
 
 [search]
-lastsearch = 2024-07-12 09:58:10
+lastsearch = 2024-07-12 11:35:36
 
 [thefelix.vn]
-match = -2.6%%
-title = Nệm cao su Felix Comfort - Độ cứng tiêu chuẩn (Cấp độ 1)
-url = https://thefelix.vn/products/nem-cao-su-felix-premium-comfort-10cm
+match = -50.0%%
+title = Nệm Cao Su Felix
+url = https://thefelix.vn/collections/nem-cao-su-felix
 
 [nemkhanganh.com]
 match = 47.4%%
