--- a/images/chieu-lac-soc-16/config.ini
+++ b/images/chieu-lac-soc-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-soc-16.html
 lastopen = 2024-06-09 23:48:14
 
 [search]
-lastsearch = 2024-07-11 21:48:29
+lastsearch = 2024-07-12 11:53:07
 
 [www.pnj.com.vn]
 match = -56.2%%
@@ -430,4 +430,9 @@ url = http://timbus.vn/
 match = -20.0%%
 title = chuyến bay
 url = https://www.noibaiairport.vn/vi/departures
+
+[moh.gov.vn]
+match = -200.0%%
+title = Cấp cứu thai lạc chỗ trong ổ bụng vỡ gây mất máu nguy ...
+url = https://moh.gov.vn/hoat-dong-cua-lanh-dao-bo/-/asset_publisher/k206Q9qkZOqn/content/cap-cuu-thai-lac-cho-trong-o-bung-vo-gay-mat-mau-nguy-hiem-tinh-mang?inheritRedirect=false&redirect=https://moh.gov.vn:443/hoat-dong-cua-lanh-dao-bo?p_p_id=101_INSTANCE_k206Q9qkZOqn&p_p_lifecycle=0&p_p_state=normal&p_p_mode=view&p_p_col_id=row-0-column-2&p_p_col_pos=1&p_p_col_count=2
 
