--- a/images/bo-chan-ga-goi-mau-re-16/config.ini
+++ b/images/bo-chan-ga-goi-mau-re-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/bo-chan-ga-goi-mau-re-16.html
 lastopen = 2024-06-09 23:45:13
 
 [search]
-lastsearch = 2024-07-12 04:50:20
+lastsearch = 2024-07-12 11:48:15
 
 [changagoidemsonghong.com]
 match = 4.2%%
@@ -77,9 +77,9 @@ title = Các mẫu chăn ga gối đệm đẹp và đáng mua nhất hiện nay
 url = https://ru9.vn/blogs/magazine/cac-mau-chan-ga-goi-dem
 
 [shopee.vn]
-match = -75.0%%
-title = {1}Bộ ga thun 4 món 16 màu drap giường thun lạnh Hàn ...
-url = https://shopee.vn/-1-Bộ-ga-thun-4-món-16-màu-drap-giường-thun-lạnh-Hàn-Quốc-i.11438690.167422602
+match = -62.5%%
+title = bộ chăn ga gối màu xanh lá giá tốt Tháng 7, 2024 | Mua ngay
+url = https://shopee.vn/search?keyword=bộ chăn ga gối màu xanh lá&urlold=bo-chan-ga-goi-cottong-tim-no-mau-xanh-la-cay-chan-chan-bong-1m2x2m-them-vo-goi-om/950738970322120554/2642071820174507179/ 
 
 [demxanh.com]
 match = -8.3%%
