--- a/images/chieu-gap-dai-loan-lua-15/config.ini
+++ b/images/chieu-gap-dai-loan-lua-15/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-gap-dai-loan-lua-15.html
 lastopen = 2024-06-09 21:46:38
 
 [search]
-lastsearch = 2024-07-12 11:35:58
+lastsearch = 2024-07-12 11:50:19
 
 [shopee.vn]
 match = -8.0%%
@@ -112,9 +112,9 @@ title = Lừa đảo xuất khẩu lao động, người đàn ông Đài Loan l
 url = https://congly.vn/lua-dao-xuat-khau-lao-dong-nguoi-dan-ong-dai-loan-linh-12-nam-tu-399654.html
 
 [trithucvn.co]
-match = -52.0%%
-title = 15 người Đài Loan vào Trung Quốc bị bắt giữ, 51 ...
-url = https://trithucvn.co/the-gioi/15-nguoi-dai-loan-vao-trung-quoc-bi-bat-giu-51-nguoi-bi-tham-van.html
+match = -76.0%%
+title = Mỹ mua lại dàn tên lửa Hawk của Đài Loan để viện trợ cho ...
+url = https://trithucvn.co/the-gioi/my-mua-lai-dan-ten-lua-hawk-cua-dai-loan-de-vien-tro-cho-ukraine.html
 
 [www.klook.com]
 match = -56.0%%
