--- a/images/nem-sieu-nhe-9f-15/config.ini
+++ b/images/nem-sieu-nhe-9f-15/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/nem-sieu-nhe-9f-15.html
 lastopen = 2024-06-10 00:49:22
 
 [search]
-lastsearch = 2024-07-12 05:33:26
+lastsearch = 2024-07-12 11:48:37
 
 [www.lazada.vn]
-match = -94.4%%
-title = Nệm Siêu Nhẹ Giá Tốt T03/2024 | Mua tại Lazada.vn
-url = https://www.lazada.vn/tag/nem-sieu-nhe/
+match = -27.8%%
+title = Nệm Cao Su Mỏng Giá Tốt T07/2024
+url = https://www.lazada.vn/tag/nem-cao-su-mong/
 
 [m.facebook.com]
 match = -100.0%%
@@ -22,9 +22,9 @@ title = WeirdoPotato Studio (@weirdo_potato_studio)
 url = https://www.instagram.com/weirdo_potato_studio/?hl=en
 
 [thegioinem.com]
-match = -111.1%%
-title = Bảng giá nệm Vạn Thành khuyến mãi mới nhất 2024
-url = https://thegioinem.com/bang-gia-nem-van-thanh-moi.html
+match = 17.6%%
+title = Bảng Giá Nệm 2024
+url = https://thegioinem.com/bang-gia-nem
 
 [cotienfoods.vn]
 match = -72.2%%
