CI images update

--- a/images/tui-singapore15/config.ini
+++ b/images/tui-singapore15/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/tui-singapore15.html
 lastopen = 2024-06-10 00:27:49
 
 [search]
-lastsearch = 2024-07-12 09:05:15
+lastsearch = 2024-07-12 12:37:48
 
 [www.tui.co.uk]
-match = -86.7%%
-title = Top things to do in Singapore | Discover
-url = https://www.tui.co.uk/discover/top-things-to-do-singapore
+match = -80.0%%
+title = Marella Discovery 2 Itineraries
+url = https://www.tui.co.uk/cruise/ships/marella-discovery-2/itineraries
 
 [www.travelgossip.co.uk]
 match = -126.7%%
@@ -17,9 +17,9 @@ title = TUI's new Birmingham-Singapore flight takes off
 url = https://www.travelgossip.co.uk/latestnews/tuis-birmingham-singapore-flight-takes-off/
 
 [www.flightaware.com]
-match = -226.7%%
-title = BY165 (TOM165) TUI Airways Flight Tracking and History 15- ...
-url = https://www.flightaware.com/live/flight/TOM165/history/20240315/0520Z/WSSS/EGCC
+match = -60.0%%
+title = Live TUI Airways Flight Status
+url = https://www.flightaware.com/live/fleet/TOM
 
 [www.cruisetimetables.com]
 match = -20.0%%
@@ -195,4 +195,9 @@ url = https://www.radleylondon.com/
 match = -173.3%%
 title = TUI Airways Limited to Singapore Flight Ticket Booking
 url = https://in.trip.com/flights/airline-by/thomson-airways-limited-flight-to-sin/
+
+[www.sellingtravel.co.uk]
+match = -86.7%%
+title = TUI launches direct flight to Singapore
+url = https://www.sellingtravel.co.uk/tui-launches-direct-flight-to-singapore/
 
