--- a/images/chieu-lac-gam-16/config.ini
+++ b/images/chieu-lac-gam-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-gam-16.html
 lastopen = 2024-06-09 23:10:09
 
 [search]
-lastsearch = 2024-07-12 10:19:16
+lastsearch = 2024-07-12 12:34:10
 
 [www.diepxuan.com]
 match = 22.2%%
@@ -435,4 +435,9 @@ url = https://atecvietnambranch.com/
 match = -75.0%%
 title = Tốc Chiến - Thông Tin Bản Cập Nhật 5.1
 url = https://wildrift.leagueoflegends.com/vi-vn/news/game-updates/wild-rift-patch-notes-5-1/
+
+[thcsnguyenankhuong.hcm.edu.vn]
+match = -6.2%%
+title = THCS Nguyễn An Khương
+url = https://thcsnguyenankhuong.hcm.edu.vn/
 
