--- a/images/ruot-nem-korea-9f-14-19/config.ini
+++ b/images/ruot-nem-korea-9f-14-19/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ruot-nem-korea-9f-14-19.html
 lastopen = 2024-06-10 00:27:45
 
 [search]
-lastsearch = 2024-07-12 10:47:09
+lastsearch = 2024-07-12 12:33:14
 
 [en.wikipedia.org]
 match = 0.0%%
@@ -89,7 +89,7 @@ url = http://br.ign.com/
 [books.google.com]
 match = -104.3%%
 title = 1968 Annual Supplement - Page 1252 - Google Books Result
-url = https://books.google.com/books?id=Xk32BwAAQBAJ&pg=PA1252&lpg=PA1252&dq=ruot+nem+korea+9f+14+19&source=bl&ots=P-86jVl9ch&sig=ACfU3U3ElPN1j_rKP_WApmpcho1-uVARYg&hl=en&sa=X&ved=2ahUKEwiI4__ey6CHAxWIM0QIHaXTBtAQ6AF6BAgVEAM
+url = https://books.google.com/books?id=Xk32BwAAQBAJ&pg=PA1252&lpg=PA1252&dq=ruot+nem+korea+9f+14+19&source=bl&ots=P-86jWhcjd&sig=ACfU3U2IzYpleHS_r-WT9PTmBY5Ec65wYg&hl=en&sa=X&ved=2ahUKEwjawLS646CHAxVsC3kGHZuhBUQQ6AF6BAgVEAM
 
 [30rates.com]
 match = -104.3%%
