CI images update

--- a/images/ga-ni-long-16/config.ini
+++ b/images/ga-ni-long-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ga-ni-long-16.html
 lastopen = 2024-06-09 23:07:25
 
 [search]
-lastsearch = 2024-07-12 02:19:23
+lastsearch = 2024-07-12 13:17:56
 
 [www.georgianicols.com]
 match = -69.2%%
@@ -52,9 +52,9 @@ title = CDL Licensing Information FAQs | Georgia Department of ...
 url = https://dds.georgia.gov/cdl-licensing-information-faqs
 
 [www.instagram.com]
-match = -84.6%%
-title = George_ahhh - Georgia Ellenwood
-url = https://www.instagram.com/george_ahhh/?hl=en
+match = -138.5%%
+title = Gani aka Michelle Cypher (@ghanizzle)
+url = https://www.instagram.com/ghanizzle/
 
 [www.nebf.com]
 match = -46.2%%
@@ -212,8 +212,8 @@ title = Linde: Industrial Gases, Supply, Equipment & Services
 url = https://www.lindeus.com/
 
 [mepublic.tarrantcounty.com]
-match = -215.4%%
-title = Medical Examiner's Case Records - Tarrant County
+match = -100.0%%
+title = MEDICAL EXAMINER'S CASE RECORDS
 url = https://mepublic.tarrantcounty.com/
 
 [youtube.fandom.com]
