--- a/images/chieu-dieu-hoa-kem-goi-14/config.ini
+++ b/images/chieu-dieu-hoa-kem-goi-14/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/chieu-dieu-hoa-kem-goi-14.html
 lastopen = 2024-07-01 09:57:37
 
 [search]
-lastsearch = 2024-07-12 12:15:49
+lastsearch = 2024-07-12 13:24:44
 
 [shopee.vn]
-match = 60.0%%
-title = chiếu điều hoà tặng kèm gối manny
-url = https://shopee.vn/chiếu-điều-hoà-tặng-kèm-gối-manny-i.43102896.17874439616
+match = -48.0%%
+title = Chiếu điều hòa cao su non coco mẫu mới 2024 tặng kèm 2 ...
+url = https://shopee.vn/Chiếu-điều-hòa-cao-su-non-coco-mẫu-mới-2024-tặng-kèm-2-vỏ-gối-Ga-cao-su-non-điều-hòa-đủ-kích-thước-i.891230701.25266141134
 
 [meoi.com.vn]
 match = 24.0%%
@@ -80,4 +80,9 @@ url = https://www.youtube.com/watch?v=fhwNXjU32Ww
 match = 33.3%%
 title = Chiếu Mây Điều Hòa 3D
 url = https://chieutrelanlan.com/chieu-may-dieu-hoa-3-D-p18.html
+
+[linhkienlammusic.com]
+match = 12.0%%
+title = Chiếu Điều Hoà Cao Su Non Tặng Kèm Gối Cho Bé
+url = https://linhkienlammusic.com/chieu-dieu-hoa-cao-su-non-tang-kem-goi-cho-be
 
