--- a/images/chieu-gap-dai-loan-lua-15/config.ini
+++ b/images/chieu-gap-dai-loan-lua-15/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-gap-dai-loan-lua-15.html
 lastopen = 2024-06-09 21:46:38
 
 [search]
-lastsearch = 2024-07-12 11:50:19
+lastsearch = 2024-07-12 13:24:55
 
 [shopee.vn]
 match = -8.0%%
@@ -22,9 +22,9 @@ title = XUẤT KHẨU LAO ĐỘNG ĐÀI LOAN: TUYỂN GẤP 15 NAM ...
 url = https://hoanglongcms.com/donhang/xuat-khau-lao-dong-dai-loan-tuyen-gap-15-nam-san-xuat-thuy-tinh/
 
 [www.facebook.com]
-match = -16.0%%
-title = Ăn chơi Đài Loan 台灣 - 去哪吃啥?
-url = https://www.facebook.com/groups/anchoidailoan/
+match = 12.0%%
+title = Xin chào, tôi ở Đài Loan | Kaohsiung
+url = https://www.facebook.com/toiodailoan/
 
 [vi.wikipedia.org]
 match = 12.5%%
