--- a/images/nem-lo-xo-techwood-18/config.ini
+++ b/images/nem-lo-xo-techwood-18/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/nem-lo-xo-techwood-18.html
 lastopen = 2024-06-10 00:49:07
 
 [search]
-lastsearch = 2024-07-12 10:48:04
+lastsearch = 2024-07-12 13:23:21
 
 [demtot.com]
-match = 4.8%%
-title = Tag Archives: đệm lò xo
-url = https://demtot.com/tag/dem-lo-xo/
+match = -44.4%%
+title = Đệm Lò Xo
+url = https://demtot.com/dem-lo-xo/
 
 [tuananh.vn]
 match = 52.4%%
@@ -82,9 +82,9 @@ title = Đệm lò xo Techwood Tuấn Anh
 url = https://dem24h.vn/dem-lo-xo-techwood-tuan-anh-1
 
 [demgiare.net]
-match = -104.8%%
-title = Đánh giá “độ khỏe” của cột sống khi sử dụng đệm lò xo
-url = https://demgiare.net/danh-gia-“do-khoe”-cua-cot-song-khi-su-dung-dem-lo-xo.htm
+match = 4.8%%
+title = ĐỆM LÒ XO TECHWOOD 1M8 X 2M SALE OFF 40%%
+url = https://demgiare.net/dem-lo-xo-techwood-1m8-x-2m.html
 
 [m.facebook.com]
 match = 23.8%%
