CI images update

--- a/images/chieu-lac-d2-14/config.ini
+++ b/images/chieu-lac-d2-14/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-d2-14.html
 lastopen = 2024-06-21 06:28:49
 
 [search]
-lastsearch = 2024-07-12 12:47:07
+lastsearch = 2024-07-12 13:36:57
 
 [www.diepxuan.com]
 match = 33.3%%
@@ -290,4 +290,14 @@ url = https://vjol.info.vn/index.php/vinhuni/article/download/51293/42137/
 match = -100.0%%
 title = Cờ vua
 url = http://thtanthanh.phubinh.edu.vn/chuyen-mon/co-vua.html
+
+[m.vietnamese.projectorlamp-replacement.com]
+match = -180.0%%
+title = Đèn chiếu LMP-D214 SONY - Projector Lamp Replacement
+url = https://m.vietnamese.projectorlamp-replacement.com/sale-41292319-lmp-d214-replacement-sony-projector-lamp-vpl-d200-vpl-dx220-vpl-dw240-dx270.html
+
+[www.thientongvietnam.net]
+match = 7.1%%
+title = TRẦN THÁI TÔNG
+url = http://www.thientongvietnam.net/kinhsach-thike/dirs/khoahuluc/unicode/p1.html
 
