--- a/images/ruot-nem-korea-9f-12/config.ini
+++ b/images/ruot-nem-korea-9f-12/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ruot-nem-korea-9f-12.html
 lastopen = 2024-06-09 23:03:30
 
 [search]
-lastsearch = 2024-07-12 03:30:14
+lastsearch = 2024-07-12 13:39:11
 
 [www.diepxuan.com]
 match = -35.0%%
@@ -22,9 +22,9 @@ title = Riot is cutting back budget on esports? : r/leagueoflegends
 url = https://www.reddit.com/r/leagueoflegends/comments/9aqbes/riot_is_cutting_back_budget_on_esports/
 
 [en.wikipedia.org]
-match = -33.3%%
-title = Nam Joo-hyuk
-url = https://en.wikipedia.org/wiki/Nam_Joo-hyuk
+match = 5.6%%
+title = Vietnamese cuisine
+url = https://en.wikipedia.org/wiki/Vietnamese_cuisine
 
 [www.facebook.com]
 match = 15.0%%
@@ -134,7 +134,7 @@ url = https://wildrift.leagueoflegends.com/en-us/
 [books.google.com]
 match = -135.0%%
 title = The Japan Daily Mail - Page 194 - Google Books Result
-url = https://books.google.com/books?id=63Q9AQAAMAAJ&pg=RA1-PA194&lpg=RA1-PA194&dq=ruot+nem+korea+9f+12&source=bl&ots=-bek1kGQgU&sig=ACfU3U2Escm9GEbZEkbfThffkwcpiiDpBw&hl=en&sa=X&ved=2ahUKEwi879yK6p-HAxU8EVkFHVLMBWAQ6AF6BAg_EAM
+url = https://books.google.com/books?id=63Q9AQAAMAAJ&pg=RA1-PA194&lpg=RA1-PA194&dq=ruot+nem+korea+9f+12&source=bl&ots=-bek1oDLkR&sig=ACfU3U0loESCb5RzXIHCi-PmNuLxpm0VAA&hl=en&sa=X&ved=2ahUKEwjjoPWY8qCHAxV5FFkFHfU2CrIQ6AF6BAgmEAM
 
 [thehill.com]
 match = -105.0%%
