--- a/images/chieu-nhua-ha-noi-14/config.ini
+++ b/images/chieu-nhua-ha-noi-14/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-nhua-ha-noi-14.html
 lastopen = 2024-06-09 22:51:04
 
 [search]
-lastsearch = 2024-07-12 10:46:16
+lastsearch = 2024-07-12 13:39:56
 
 [www.diepxuan.com]
 match = 10.0%%
@@ -12,9 +12,9 @@ title = Chiếu nhựa Hà Nội 100x190 - Điệp Xuân
 url = https://www.diepxuan.com/chieu-nhua-ha-noi-100x190.html
 
 [shopee.vn]
-match = -70.0%%
-title = Chiếu nhựa - Giá Tốt, Miễn Phí Vận Chuyển, Đủ Loại
-url = https://shopee.vn/list/chiếu/nhựa
+match = 70.0%%
+title = Chiếu nhựa Hà Nội các cỡ
+url = https://shopee.vn/Chiếu-nhựa-Hà-Nội-các-cỡ-i.236527859.6960486970
 
 [tchome.vn]
 match = 20.0%%
@@ -32,9 +32,9 @@ title = chiếu nhựa, chiếu cói ở tại hà nội
 url = https://www.yellowpages.vn/class/490435/chiếu-nhựa,-chiếu-cói-ở_hà-nội.html
 
 [trangvangvietnam.com]
-match = -65.0%%
-title = Chiếu Nằm (Chiếu Tre, Chiếu Trúc, Chiếu Cói,..)
-url = https://trangvangvietnam.com/categories/490435/chieu-nam-(chieu-tre-chieu-truc-chieu-coi,..).html
+match = -90.0%%
+title = chiếu nhựa chiếu cói chiếu tre chiếu trúc ở tại hà nội
+url = https://trangvangvietnam.com/cateprovinces/490435/chiếu-nhựa-chiếu-cói-chiếu-tre-chiếu-trúc-ở-tại-hà-nội.html
 
 [www.sendo.vn]
 match = -75.0%%
