--- a/images/vo-goi-ks-uc-50-70/config.ini
+++ b/images/vo-goi-ks-uc-50-70/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/vo-goi-ks-uc-50-70.html
 lastopen = 2024-06-10 00:52:12
 
 [search]
-lastsearch = 2024-07-12 13:25:42
+lastsearch = 2024-07-12 13:39:44
 
 [www.lazada.vn]
 match = -55.6%%
@@ -47,9 +47,9 @@ title = {search_title}
 url = {search_url}
 
 [ninhouse.vn]
-match = 43.8%%
-title = Vỏ gối khách sạn
-url = https://ninhouse.vn/products/vo-goi-khach-san
+match = 44.4%%
+title = Vỏ gối nằm Classic
+url = https://ninhouse.vn/collections/vo-goi-nam-classic
 
 [tonybed.vn]
 match = -100.0%%
@@ -202,9 +202,9 @@ title = Talis S Single lever basin mixer 100 with pop-up waste set
 url = https://www.hansgrohe.com/articledetail-talis-s-single-lever-basin-mixer-100-with-pop-up-waste-set-72020000
 
 [pro.hansgrohe.com]
-match = -155.6%%
-title = Talis E Shower mixers: 1 function, Chrome, Item No. ...
-url = https://pro.hansgrohe.com/articledetail-talis-e-single-lever-shower-mixer-for-concealed-installation-for-ibox-universal-71765000
+match = -138.9%%
+title = AXOR Universal Softsquare Shower door handle 444 mm
+url = https://pro.hansgrohe.com/articledetail-axor-universal-softsquare-shower-door-handle-444-mm-42837000
 
 [www.sciencedirect.com]
 match = -150.0%%
@@ -259,5 +259,5 @@ url = https://www.nrc.gov/docs/ML1922/ML19221A563.pdf
 [www.axor-design.com]
 match = -111.1%%
 title = 3-hole basin mixer 70 with push-open waste set
-url = https://www.axor-design.com/asia/articledetail-axor-myedition-3-hole-basin-mixer-70-with-push-open-waste-set-47050000
+url = https://www.axor-design.com/in/articledetail-axor-myedition-3-hole-basin-mixer-70-with-push-open-waste-set-47050000
 
